// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LambdaApiConstruct (customDomain) synthetizes properly 1`] = `
"{
  \\"Resources\\": {
    \\"LambdaApiTestApiCDC7EDDF\\": {
      \\"Type\\": \\"AWS::ApiGateway::RestApi\\",
      \\"Properties\\": {
        \\"Name\\": \\"TestApi\\"
      }
    },
    \\"LambdaApiTestApiDeploymentC09FA65F3203932b7210765647843d6fd51bb09e\\": {
      \\"Type\\": \\"AWS::ApiGateway::Deployment\\",
      \\"Properties\\": {
        \\"RestApiId\\": {
          \\"Ref\\": \\"LambdaApiTestApiCDC7EDDF\\"
        },
        \\"Description\\": \\"Automatically created by the RestApi construct\\"
      },
      \\"DependsOn\\": [
        \\"LambdaApiTestApihelloidGETC46CEBC1\\",
        \\"LambdaApiTestApihelloid2F778A8B\\",
        \\"LambdaApiTestApihelloOPTIONS0D3F2434\\",
        \\"LambdaApiTestApihello287B32B7\\"
      ]
    },
    \\"LambdaApiTestApiDeploymentStageprod7DCB485F\\": {
      \\"Type\\": \\"AWS::ApiGateway::Stage\\",
      \\"Properties\\": {
        \\"RestApiId\\": {
          \\"Ref\\": \\"LambdaApiTestApiCDC7EDDF\\"
        },
        \\"DeploymentId\\": {
          \\"Ref\\": \\"LambdaApiTestApiDeploymentC09FA65F3203932b7210765647843d6fd51bb09e\\"
        },
        \\"StageName\\": \\"prod\\"
      }
    },
    \\"LambdaApiTestApiCloudWatchRole0731508D\\": {
      \\"Type\\": \\"AWS::IAM::Role\\",
      \\"Properties\\": {
        \\"AssumeRolePolicyDocument\\": {
          \\"Statement\\": [
            {
              \\"Action\\": \\"sts:AssumeRole\\",
              \\"Effect\\": \\"Allow\\",
              \\"Principal\\": {
                \\"Service\\": \\"apigateway.amazonaws.com\\"
              }
            }
          ],
          \\"Version\\": \\"2012-10-17\\"
        },
        \\"ManagedPolicyArns\\": [
          {
            \\"Fn::Join\\": [
              \\"\\",
              [
                \\"arn:\\",
                {
                  \\"Ref\\": \\"AWS::Partition\\"
                },
                \\":iam::aws:policy/service-role/AmazonAPIGatewayPushToCloudWatchLogs\\"
              ]
            ]
          }
        ]
      }
    },
    \\"LambdaApiTestApiAccount4308A17A\\": {
      \\"Type\\": \\"AWS::ApiGateway::Account\\",
      \\"Properties\\": {
        \\"CloudWatchRoleArn\\": {
          \\"Fn::GetAtt\\": [
            \\"LambdaApiTestApiCloudWatchRole0731508D\\",
            \\"Arn\\"
          ]
        }
      },
      \\"DependsOn\\": [
        \\"LambdaApiTestApiCDC7EDDF\\"
      ]
    },
    \\"LambdaApiTestApihello287B32B7\\": {
      \\"Type\\": \\"AWS::ApiGateway::Resource\\",
      \\"Properties\\": {
        \\"ParentId\\": {
          \\"Fn::GetAtt\\": [
            \\"LambdaApiTestApiCDC7EDDF\\",
            \\"RootResourceId\\"
          ]
        },
        \\"PathPart\\": \\"hello\\",
        \\"RestApiId\\": {
          \\"Ref\\": \\"LambdaApiTestApiCDC7EDDF\\"
        }
      }
    },
    \\"LambdaApiTestApihelloOPTIONS0D3F2434\\": {
      \\"Type\\": \\"AWS::ApiGateway::Method\\",
      \\"Properties\\": {
        \\"HttpMethod\\": \\"OPTIONS\\",
        \\"ResourceId\\": {
          \\"Ref\\": \\"LambdaApiTestApihello287B32B7\\"
        },
        \\"RestApiId\\": {
          \\"Ref\\": \\"LambdaApiTestApiCDC7EDDF\\"
        },
        \\"AuthorizationType\\": \\"NONE\\",
        \\"Integration\\": {
          \\"IntegrationResponses\\": [
            {
              \\"ResponseParameters\\": {
                \\"method.response.header.Access-Control-Allow-Headers\\": \\"'Content-Type,X-Amz-Date,Authorization,X-Api-Key,X-Amz-Security-Token'\\",
                \\"method.response.header.Access-Control-Allow-Origin\\": \\"'*'\\",
                \\"method.response.header.Access-Control-Allow-Credentials\\": \\"'false'\\",
                \\"method.response.header.Access-Control-Allow-Methods\\": \\"'OPTIONS,GET'\\"
              },
              \\"StatusCode\\": \\"200\\"
            }
          ],
          \\"PassthroughBehavior\\": \\"NEVER\\",
          \\"RequestTemplates\\": {
            \\"application/json\\": \\"{\\\\\\"statusCode\\\\\\": 200}\\"
          },
          \\"Type\\": \\"MOCK\\"
        },
        \\"MethodResponses\\": [
          {
            \\"ResponseParameters\\": {
              \\"method.response.header.Access-Control-Allow-Headers\\": true,
              \\"method.response.header.Access-Control-Allow-Methods\\": true,
              \\"method.response.header.Access-Control-Allow-Credentials\\": true,
              \\"method.response.header.Access-Control-Allow-Origin\\": true
            },
            \\"StatusCode\\": \\"200\\"
          }
        ]
      }
    },
    \\"LambdaApiTestApihelloid2F778A8B\\": {
      \\"Type\\": \\"AWS::ApiGateway::Resource\\",
      \\"Properties\\": {
        \\"ParentId\\": {
          \\"Ref\\": \\"LambdaApiTestApihello287B32B7\\"
        },
        \\"PathPart\\": \\"{id}\\",
        \\"RestApiId\\": {
          \\"Ref\\": \\"LambdaApiTestApiCDC7EDDF\\"
        }
      }
    },
    \\"LambdaApiTestApihelloidGETApiPermissionStackLambdaApiTestApiCA7E01A2GEThelloid49B479D1\\": {
      \\"Type\\": \\"AWS::Lambda::Permission\\",
      \\"Properties\\": {
        \\"Action\\": \\"lambda:InvokeFunction\\",
        \\"FunctionName\\": {
          \\"Fn::GetAtt\\": [
            \\"LambdaApiHelloA9D6B516\\",
            \\"Arn\\"
          ]
        },
        \\"Principal\\": \\"apigateway.amazonaws.com\\",
        \\"SourceArn\\": {
          \\"Fn::Join\\": [
            \\"\\",
            [
              \\"arn:\\",
              {
                \\"Ref\\": \\"AWS::Partition\\"
              },
              \\":execute-api:\\",
              {
                \\"Ref\\": \\"AWS::Region\\"
              },
              \\":\\",
              {
                \\"Ref\\": \\"AWS::AccountId\\"
              },
              \\":\\",
              {
                \\"Ref\\": \\"LambdaApiTestApiCDC7EDDF\\"
              },
              \\"/\\",
              {
                \\"Ref\\": \\"LambdaApiTestApiDeploymentStageprod7DCB485F\\"
              },
              \\"/GET/hello/{id}\\"
            ]
          ]
        }
      }
    },
    \\"LambdaApiTestApihelloidGETApiPermissionTestStackLambdaApiTestApiCA7E01A2GEThelloid76F978CF\\": {
      \\"Type\\": \\"AWS::Lambda::Permission\\",
      \\"Properties\\": {
        \\"Action\\": \\"lambda:InvokeFunction\\",
        \\"FunctionName\\": {
          \\"Fn::GetAtt\\": [
            \\"LambdaApiHelloA9D6B516\\",
            \\"Arn\\"
          ]
        },
        \\"Principal\\": \\"apigateway.amazonaws.com\\",
        \\"SourceArn\\": {
          \\"Fn::Join\\": [
            \\"\\",
            [
              \\"arn:\\",
              {
                \\"Ref\\": \\"AWS::Partition\\"
              },
              \\":execute-api:\\",
              {
                \\"Ref\\": \\"AWS::Region\\"
              },
              \\":\\",
              {
                \\"Ref\\": \\"AWS::AccountId\\"
              },
              \\":\\",
              {
                \\"Ref\\": \\"LambdaApiTestApiCDC7EDDF\\"
              },
              \\"/test-invoke-stage/GET/hello/{id}\\"
            ]
          ]
        }
      }
    },
    \\"LambdaApiTestApihelloidGETC46CEBC1\\": {
      \\"Type\\": \\"AWS::ApiGateway::Method\\",
      \\"Properties\\": {
        \\"HttpMethod\\": \\"GET\\",
        \\"ResourceId\\": {
          \\"Ref\\": \\"LambdaApiTestApihelloid2F778A8B\\"
        },
        \\"RestApiId\\": {
          \\"Ref\\": \\"LambdaApiTestApiCDC7EDDF\\"
        },
        \\"AuthorizationType\\": \\"COGNITO_USER_POOLS\\",
        \\"AuthorizerId\\": {
          \\"Ref\\": \\"LambdaApiAuthorizer8AC8C11E\\"
        },
        \\"Integration\\": {
          \\"IntegrationHttpMethod\\": \\"POST\\",
          \\"Type\\": \\"AWS_PROXY\\",
          \\"Uri\\": {
            \\"Fn::Join\\": [
              \\"\\",
              [
                \\"arn:\\",
                {
                  \\"Ref\\": \\"AWS::Partition\\"
                },
                \\":apigateway:\\",
                {
                  \\"Ref\\": \\"AWS::Region\\"
                },
                \\":lambda:path/2015-03-31/functions/\\",
                {
                  \\"Fn::GetAtt\\": [
                    \\"LambdaApiHelloA9D6B516\\",
                    \\"Arn\\"
                  ]
                },
                \\"/invocations\\"
              ]
            ]
          }
        }
      }
    },
    \\"LambdaApiTestApiApiDomainName455A3E11\\": {
      \\"Type\\": \\"AWS::ApiGateway::DomainName\\",
      \\"Properties\\": {
        \\"DomainName\\": \\"api1-dev.mydomain.com\\",
        \\"EndpointConfiguration\\": {
          \\"Types\\": [
            \\"REGIONAL\\"
          ]
        },
        \\"RegionalCertificateArn\\": \\"<arn-of-certificate>\\"
      }
    },
    \\"LambdaApiTestApiApiDomainNameMapStackLambdaApiTestApiCA7E01A236AB185D\\": {
      \\"Type\\": \\"AWS::ApiGateway::BasePathMapping\\",
      \\"Properties\\": {
        \\"DomainName\\": {
          \\"Ref\\": \\"LambdaApiTestApiApiDomainName455A3E11\\"
        },
        \\"RestApiId\\": {
          \\"Ref\\": \\"LambdaApiTestApiCDC7EDDF\\"
        },
        \\"Stage\\": {
          \\"Ref\\": \\"LambdaApiTestApiDeploymentStageprod7DCB485F\\"
        }
      }
    },
    \\"LambdaApiRoute53AliasFunctionServiceRole172D112F\\": {
      \\"Type\\": \\"AWS::IAM::Role\\",
      \\"Properties\\": {
        \\"AssumeRolePolicyDocument\\": {
          \\"Statement\\": [
            {
              \\"Action\\": \\"sts:AssumeRole\\",
              \\"Effect\\": \\"Allow\\",
              \\"Principal\\": {
                \\"Service\\": \\"lambda.amazonaws.com\\"
              }
            }
          ],
          \\"Version\\": \\"2012-10-17\\"
        },
        \\"ManagedPolicyArns\\": [
          {
            \\"Fn::Join\\": [
              \\"\\",
              [
                \\"arn:\\",
                {
                  \\"Ref\\": \\"AWS::Partition\\"
                },
                \\":iam::aws:policy/service-role/AWSLambdaBasicExecutionRole\\"
              ]
            ]
          }
        ]
      }
    },
    \\"LambdaApiRoute53AliasFunctionServiceRoleDefaultPolicy895D8F07\\": {
      \\"Type\\": \\"AWS::IAM::Policy\\",
      \\"Properties\\": {
        \\"PolicyDocument\\": {
          \\"Statement\\": [
            {
              \\"Action\\": \\"route53:ChangeResourceRecordSets\\",
              \\"Effect\\": \\"Allow\\",
              \\"Resource\\": \\"arn:aws:route53:::hostedzone/<hosted-zone-id>\\"
            },
            {
              \\"Action\\": \\"route53:GetChange\\",
              \\"Effect\\": \\"Allow\\",
              \\"Resource\\": \\"arn:aws:route53:::hostedzone/<hosted-zone-id>\\"
            }
          ],
          \\"Version\\": \\"2012-10-17\\"
        },
        \\"PolicyName\\": \\"LambdaApiRoute53AliasFunctionServiceRoleDefaultPolicy895D8F07\\",
        \\"Roles\\": [
          {
            \\"Ref\\": \\"LambdaApiRoute53AliasFunctionServiceRole172D112F\\"
          }
        ]
      }
    },
    \\"LambdaApiRoute53AliasFunction1330D1C8\\": {
      \\"Type\\": \\"AWS::Lambda::Function\\",
      \\"Properties\\": {
        \\"Code\\": {
          \\"S3Bucket\\": {
            \\"Ref\\": \\"AssetParameters8ee8fb524eef3fdcf0c8f7b3a096bc2b85686756e8a3c7176c033e494f985168S3Bucket84802930\\"
          },
          \\"S3Key\\": {
            \\"Fn::Join\\": [
              \\"\\",
              [
                {
                  \\"Fn::Select\\": [
                    0,
                    {
                      \\"Fn::Split\\": [
                        \\"||\\",
                        {
                          \\"Ref\\": \\"AssetParameters8ee8fb524eef3fdcf0c8f7b3a096bc2b85686756e8a3c7176c033e494f985168S3VersionKey04C3B8A9\\"
                        }
                      ]
                    }
                  ]
                },
                {
                  \\"Fn::Select\\": [
                    1,
                    {
                      \\"Fn::Split\\": [
                        \\"||\\",
                        {
                          \\"Ref\\": \\"AssetParameters8ee8fb524eef3fdcf0c8f7b3a096bc2b85686756e8a3c7176c033e494f985168S3VersionKey04C3B8A9\\"
                        }
                      ]
                    }
                  ]
                }
              ]
            ]
          }
        },
        \\"Handler\\": \\"index.route53Alias\\",
        \\"Role\\": {
          \\"Fn::GetAtt\\": [
            \\"LambdaApiRoute53AliasFunctionServiceRole172D112F\\",
            \\"Arn\\"
          ]
        },
        \\"Runtime\\": \\"nodejs12.x\\",
        \\"Timeout\\": 60
      },
      \\"DependsOn\\": [
        \\"LambdaApiRoute53AliasFunctionServiceRoleDefaultPolicy895D8F07\\",
        \\"LambdaApiRoute53AliasFunctionServiceRole172D112F\\"
      ]
    },
    \\"LambdaApiRoute53AliasBDA45B8C\\": {
      \\"Type\\": \\"AWS::CloudFormation::CustomResource\\",
      \\"Properties\\": {
        \\"ServiceToken\\": {
          \\"Fn::GetAtt\\": [
            \\"LambdaApiRoute53AliasFunction1330D1C8\\",
            \\"Arn\\"
          ]
        },
        \\"HostedZoneId\\": \\"<hosted-zone-id>\\",
        \\"DomainName\\": \\"api1-dev.mydomain.com\\",
        \\"TheAliasTarget\\": {
          \\"DNSName\\": {
            \\"Fn::GetAtt\\": [
              \\"LambdaApiTestApiApiDomainName455A3E11\\",
              \\"RegionalDomainName\\"
            ]
          },
          \\"HostedZoneId\\": \\"Z1UJRXOUMOOFQ8\\",
          \\"EvaluateTargetHealth\\": false
        }
      },
      \\"UpdateReplacePolicy\\": \\"Delete\\",
      \\"DeletionPolicy\\": \\"Delete\\"
    },
    \\"LambdaApiAuthorizer8AC8C11E\\": {
      \\"Type\\": \\"AWS::ApiGateway::Authorizer\\",
      \\"Properties\\": {
        \\"RestApiId\\": {
          \\"Ref\\": \\"LambdaApiTestApiCDC7EDDF\\"
        },
        \\"Type\\": \\"COGNITO_USER_POOLS\\",
        \\"IdentitySource\\": \\"method.request.header.Authorization\\",
        \\"Name\\": \\"authorizer\\",
        \\"ProviderARNs\\": [
          {
            \\"Fn::Join\\": [
              \\"\\",
              [
                \\"arn:aws:cognito-idp:\\",
                {
                  \\"Ref\\": \\"AWS::Region\\"
                },
                \\":\\",
                {
                  \\"Ref\\": \\"AWS::AccountId\\"
                },
                \\":userpool/us-east-1_abcdefgh\\"
              ]
            ]
          }
        ]
      }
    },
    \\"LambdaApiHelloServiceRole7B3F9417\\": {
      \\"Type\\": \\"AWS::IAM::Role\\",
      \\"Properties\\": {
        \\"AssumeRolePolicyDocument\\": {
          \\"Statement\\": [
            {
              \\"Action\\": \\"sts:AssumeRole\\",
              \\"Effect\\": \\"Allow\\",
              \\"Principal\\": {
                \\"Service\\": \\"lambda.amazonaws.com\\"
              }
            }
          ],
          \\"Version\\": \\"2012-10-17\\"
        },
        \\"ManagedPolicyArns\\": [
          {
            \\"Fn::Join\\": [
              \\"\\",
              [
                \\"arn:\\",
                {
                  \\"Ref\\": \\"AWS::Partition\\"
                },
                \\":iam::aws:policy/service-role/AWSLambdaBasicExecutionRole\\"
              ]
            ]
          }
        ]
      }
    },
    \\"LambdaApiHelloA9D6B516\\": {
      \\"Type\\": \\"AWS::Lambda::Function\\",
      \\"Properties\\": {
        \\"Code\\": {
          \\"S3Bucket\\": {
            \\"Ref\\": \\"AssetParametersf07ecf78d8de4fd74f5fe314bf9505be390b1cc665ccc5b05ef8ce4aeed2be62S3Bucket60B0362A\\"
          },
          \\"S3Key\\": {
            \\"Fn::Join\\": [
              \\"\\",
              [
                {
                  \\"Fn::Select\\": [
                    0,
                    {
                      \\"Fn::Split\\": [
                        \\"||\\",
                        {
                          \\"Ref\\": \\"AssetParametersf07ecf78d8de4fd74f5fe314bf9505be390b1cc665ccc5b05ef8ce4aeed2be62S3VersionKey0758FFA8\\"
                        }
                      ]
                    }
                  ]
                },
                {
                  \\"Fn::Select\\": [
                    1,
                    {
                      \\"Fn::Split\\": [
                        \\"||\\",
                        {
                          \\"Ref\\": \\"AssetParametersf07ecf78d8de4fd74f5fe314bf9505be390b1cc665ccc5b05ef8ce4aeed2be62S3VersionKey0758FFA8\\"
                        }
                      ]
                    }
                  ]
                }
              ]
            ]
          }
        },
        \\"Handler\\": \\"index.handler\\",
        \\"Role\\": {
          \\"Fn::GetAtt\\": [
            \\"LambdaApiHelloServiceRole7B3F9417\\",
            \\"Arn\\"
          ]
        },
        \\"Runtime\\": \\"nodejs12.x\\"
      },
      \\"DependsOn\\": [
        \\"LambdaApiHelloServiceRole7B3F9417\\"
      ]
    }
  },
  \\"Outputs\\": {
    \\"LambdaApiTestApiEndpoint14C92933\\": {
      \\"Value\\": {
        \\"Fn::Join\\": [
          \\"\\",
          [
            \\"https://\\",
            {
              \\"Ref\\": \\"LambdaApiTestApiCDC7EDDF\\"
            },
            \\".execute-api.\\",
            {
              \\"Ref\\": \\"AWS::Region\\"
            },
            \\".\\",
            {
              \\"Ref\\": \\"AWS::URLSuffix\\"
            },
            \\"/\\",
            {
              \\"Ref\\": \\"LambdaApiTestApiDeploymentStageprod7DCB485F\\"
            },
            \\"/\\"
          ]
        ]
      }
    }
  },
  \\"Parameters\\": {
    \\"AssetParameters8ee8fb524eef3fdcf0c8f7b3a096bc2b85686756e8a3c7176c033e494f985168S3Bucket84802930\\": {
      \\"Type\\": \\"String\\",
      \\"Description\\": \\"S3 bucket for asset \\\\\\"8ee8fb524eef3fdcf0c8f7b3a096bc2b85686756e8a3c7176c033e494f985168\\\\\\"\\"
    },
    \\"AssetParameters8ee8fb524eef3fdcf0c8f7b3a096bc2b85686756e8a3c7176c033e494f985168S3VersionKey04C3B8A9\\": {
      \\"Type\\": \\"String\\",
      \\"Description\\": \\"S3 key for asset version \\\\\\"8ee8fb524eef3fdcf0c8f7b3a096bc2b85686756e8a3c7176c033e494f985168\\\\\\"\\"
    },
    \\"AssetParameters8ee8fb524eef3fdcf0c8f7b3a096bc2b85686756e8a3c7176c033e494f985168ArtifactHashDB14117A\\": {
      \\"Type\\": \\"String\\",
      \\"Description\\": \\"Artifact hash for asset \\\\\\"8ee8fb524eef3fdcf0c8f7b3a096bc2b85686756e8a3c7176c033e494f985168\\\\\\"\\"
    },
    \\"AssetParametersf07ecf78d8de4fd74f5fe314bf9505be390b1cc665ccc5b05ef8ce4aeed2be62S3Bucket60B0362A\\": {
      \\"Type\\": \\"String\\",
      \\"Description\\": \\"S3 bucket for asset \\\\\\"f07ecf78d8de4fd74f5fe314bf9505be390b1cc665ccc5b05ef8ce4aeed2be62\\\\\\"\\"
    },
    \\"AssetParametersf07ecf78d8de4fd74f5fe314bf9505be390b1cc665ccc5b05ef8ce4aeed2be62S3VersionKey0758FFA8\\": {
      \\"Type\\": \\"String\\",
      \\"Description\\": \\"S3 key for asset version \\\\\\"f07ecf78d8de4fd74f5fe314bf9505be390b1cc665ccc5b05ef8ce4aeed2be62\\\\\\"\\"
    },
    \\"AssetParametersf07ecf78d8de4fd74f5fe314bf9505be390b1cc665ccc5b05ef8ce4aeed2be62ArtifactHashD1B4CB31\\": {
      \\"Type\\": \\"String\\",
      \\"Description\\": \\"Artifact hash for asset \\\\\\"f07ecf78d8de4fd74f5fe314bf9505be390b1cc665ccc5b05ef8ce4aeed2be62\\\\\\"\\"
    }
  }
}"
`;

exports[`LambdaApiConstruct (dynamo and bucket) synthetizes properly 1`] = `
"{
  \\"Resources\\": {
    \\"LambdaApiTestApiCDC7EDDF\\": {
      \\"Type\\": \\"AWS::ApiGateway::RestApi\\",
      \\"Properties\\": {
        \\"Name\\": \\"TestApi\\"
      }
    },
    \\"LambdaApiTestApiDeploymentC09FA65F3203932b7210765647843d6fd51bb09e\\": {
      \\"Type\\": \\"AWS::ApiGateway::Deployment\\",
      \\"Properties\\": {
        \\"RestApiId\\": {
          \\"Ref\\": \\"LambdaApiTestApiCDC7EDDF\\"
        },
        \\"Description\\": \\"Automatically created by the RestApi construct\\"
      },
      \\"DependsOn\\": [
        \\"LambdaApiTestApihelloidGETC46CEBC1\\",
        \\"LambdaApiTestApihelloid2F778A8B\\",
        \\"LambdaApiTestApihelloOPTIONS0D3F2434\\",
        \\"LambdaApiTestApihello287B32B7\\"
      ]
    },
    \\"LambdaApiTestApiDeploymentStageprod7DCB485F\\": {
      \\"Type\\": \\"AWS::ApiGateway::Stage\\",
      \\"Properties\\": {
        \\"RestApiId\\": {
          \\"Ref\\": \\"LambdaApiTestApiCDC7EDDF\\"
        },
        \\"DeploymentId\\": {
          \\"Ref\\": \\"LambdaApiTestApiDeploymentC09FA65F3203932b7210765647843d6fd51bb09e\\"
        },
        \\"StageName\\": \\"prod\\"
      }
    },
    \\"LambdaApiTestApiCloudWatchRole0731508D\\": {
      \\"Type\\": \\"AWS::IAM::Role\\",
      \\"Properties\\": {
        \\"AssumeRolePolicyDocument\\": {
          \\"Statement\\": [
            {
              \\"Action\\": \\"sts:AssumeRole\\",
              \\"Effect\\": \\"Allow\\",
              \\"Principal\\": {
                \\"Service\\": \\"apigateway.amazonaws.com\\"
              }
            }
          ],
          \\"Version\\": \\"2012-10-17\\"
        },
        \\"ManagedPolicyArns\\": [
          {
            \\"Fn::Join\\": [
              \\"\\",
              [
                \\"arn:\\",
                {
                  \\"Ref\\": \\"AWS::Partition\\"
                },
                \\":iam::aws:policy/service-role/AmazonAPIGatewayPushToCloudWatchLogs\\"
              ]
            ]
          }
        ]
      }
    },
    \\"LambdaApiTestApiAccount4308A17A\\": {
      \\"Type\\": \\"AWS::ApiGateway::Account\\",
      \\"Properties\\": {
        \\"CloudWatchRoleArn\\": {
          \\"Fn::GetAtt\\": [
            \\"LambdaApiTestApiCloudWatchRole0731508D\\",
            \\"Arn\\"
          ]
        }
      },
      \\"DependsOn\\": [
        \\"LambdaApiTestApiCDC7EDDF\\"
      ]
    },
    \\"LambdaApiTestApihello287B32B7\\": {
      \\"Type\\": \\"AWS::ApiGateway::Resource\\",
      \\"Properties\\": {
        \\"ParentId\\": {
          \\"Fn::GetAtt\\": [
            \\"LambdaApiTestApiCDC7EDDF\\",
            \\"RootResourceId\\"
          ]
        },
        \\"PathPart\\": \\"hello\\",
        \\"RestApiId\\": {
          \\"Ref\\": \\"LambdaApiTestApiCDC7EDDF\\"
        }
      }
    },
    \\"LambdaApiTestApihelloOPTIONS0D3F2434\\": {
      \\"Type\\": \\"AWS::ApiGateway::Method\\",
      \\"Properties\\": {
        \\"HttpMethod\\": \\"OPTIONS\\",
        \\"ResourceId\\": {
          \\"Ref\\": \\"LambdaApiTestApihello287B32B7\\"
        },
        \\"RestApiId\\": {
          \\"Ref\\": \\"LambdaApiTestApiCDC7EDDF\\"
        },
        \\"AuthorizationType\\": \\"NONE\\",
        \\"Integration\\": {
          \\"IntegrationResponses\\": [
            {
              \\"ResponseParameters\\": {
                \\"method.response.header.Access-Control-Allow-Headers\\": \\"'Content-Type,X-Amz-Date,Authorization,X-Api-Key,X-Amz-Security-Token'\\",
                \\"method.response.header.Access-Control-Allow-Origin\\": \\"'*'\\",
                \\"method.response.header.Access-Control-Allow-Credentials\\": \\"'false'\\",
                \\"method.response.header.Access-Control-Allow-Methods\\": \\"'OPTIONS,GET'\\"
              },
              \\"StatusCode\\": \\"200\\"
            }
          ],
          \\"PassthroughBehavior\\": \\"NEVER\\",
          \\"RequestTemplates\\": {
            \\"application/json\\": \\"{\\\\\\"statusCode\\\\\\": 200}\\"
          },
          \\"Type\\": \\"MOCK\\"
        },
        \\"MethodResponses\\": [
          {
            \\"ResponseParameters\\": {
              \\"method.response.header.Access-Control-Allow-Headers\\": true,
              \\"method.response.header.Access-Control-Allow-Methods\\": true,
              \\"method.response.header.Access-Control-Allow-Credentials\\": true,
              \\"method.response.header.Access-Control-Allow-Origin\\": true
            },
            \\"StatusCode\\": \\"200\\"
          }
        ]
      }
    },
    \\"LambdaApiTestApihelloid2F778A8B\\": {
      \\"Type\\": \\"AWS::ApiGateway::Resource\\",
      \\"Properties\\": {
        \\"ParentId\\": {
          \\"Ref\\": \\"LambdaApiTestApihello287B32B7\\"
        },
        \\"PathPart\\": \\"{id}\\",
        \\"RestApiId\\": {
          \\"Ref\\": \\"LambdaApiTestApiCDC7EDDF\\"
        }
      }
    },
    \\"LambdaApiTestApihelloidGETApiPermissionStackLambdaApiTestApiCA7E01A2GEThelloid49B479D1\\": {
      \\"Type\\": \\"AWS::Lambda::Permission\\",
      \\"Properties\\": {
        \\"Action\\": \\"lambda:InvokeFunction\\",
        \\"FunctionName\\": {
          \\"Fn::GetAtt\\": [
            \\"LambdaApiHelloA9D6B516\\",
            \\"Arn\\"
          ]
        },
        \\"Principal\\": \\"apigateway.amazonaws.com\\",
        \\"SourceArn\\": {
          \\"Fn::Join\\": [
            \\"\\",
            [
              \\"arn:\\",
              {
                \\"Ref\\": \\"AWS::Partition\\"
              },
              \\":execute-api:\\",
              {
                \\"Ref\\": \\"AWS::Region\\"
              },
              \\":\\",
              {
                \\"Ref\\": \\"AWS::AccountId\\"
              },
              \\":\\",
              {
                \\"Ref\\": \\"LambdaApiTestApiCDC7EDDF\\"
              },
              \\"/\\",
              {
                \\"Ref\\": \\"LambdaApiTestApiDeploymentStageprod7DCB485F\\"
              },
              \\"/GET/hello/{id}\\"
            ]
          ]
        }
      }
    },
    \\"LambdaApiTestApihelloidGETApiPermissionTestStackLambdaApiTestApiCA7E01A2GEThelloid76F978CF\\": {
      \\"Type\\": \\"AWS::Lambda::Permission\\",
      \\"Properties\\": {
        \\"Action\\": \\"lambda:InvokeFunction\\",
        \\"FunctionName\\": {
          \\"Fn::GetAtt\\": [
            \\"LambdaApiHelloA9D6B516\\",
            \\"Arn\\"
          ]
        },
        \\"Principal\\": \\"apigateway.amazonaws.com\\",
        \\"SourceArn\\": {
          \\"Fn::Join\\": [
            \\"\\",
            [
              \\"arn:\\",
              {
                \\"Ref\\": \\"AWS::Partition\\"
              },
              \\":execute-api:\\",
              {
                \\"Ref\\": \\"AWS::Region\\"
              },
              \\":\\",
              {
                \\"Ref\\": \\"AWS::AccountId\\"
              },
              \\":\\",
              {
                \\"Ref\\": \\"LambdaApiTestApiCDC7EDDF\\"
              },
              \\"/test-invoke-stage/GET/hello/{id}\\"
            ]
          ]
        }
      }
    },
    \\"LambdaApiTestApihelloidGETC46CEBC1\\": {
      \\"Type\\": \\"AWS::ApiGateway::Method\\",
      \\"Properties\\": {
        \\"HttpMethod\\": \\"GET\\",
        \\"ResourceId\\": {
          \\"Ref\\": \\"LambdaApiTestApihelloid2F778A8B\\"
        },
        \\"RestApiId\\": {
          \\"Ref\\": \\"LambdaApiTestApiCDC7EDDF\\"
        },
        \\"AuthorizationType\\": \\"NONE\\",
        \\"Integration\\": {
          \\"IntegrationHttpMethod\\": \\"POST\\",
          \\"Type\\": \\"AWS_PROXY\\",
          \\"Uri\\": {
            \\"Fn::Join\\": [
              \\"\\",
              [
                \\"arn:\\",
                {
                  \\"Ref\\": \\"AWS::Partition\\"
                },
                \\":apigateway:\\",
                {
                  \\"Ref\\": \\"AWS::Region\\"
                },
                \\":lambda:path/2015-03-31/functions/\\",
                {
                  \\"Fn::GetAtt\\": [
                    \\"LambdaApiHelloA9D6B516\\",
                    \\"Arn\\"
                  ]
                },
                \\"/invocations\\"
              ]
            ]
          }
        }
      }
    },
    \\"LambdaApiHelloServiceRole7B3F9417\\": {
      \\"Type\\": \\"AWS::IAM::Role\\",
      \\"Properties\\": {
        \\"AssumeRolePolicyDocument\\": {
          \\"Statement\\": [
            {
              \\"Action\\": \\"sts:AssumeRole\\",
              \\"Effect\\": \\"Allow\\",
              \\"Principal\\": {
                \\"Service\\": \\"lambda.amazonaws.com\\"
              }
            }
          ],
          \\"Version\\": \\"2012-10-17\\"
        },
        \\"ManagedPolicyArns\\": [
          {
            \\"Fn::Join\\": [
              \\"\\",
              [
                \\"arn:\\",
                {
                  \\"Ref\\": \\"AWS::Partition\\"
                },
                \\":iam::aws:policy/service-role/AWSLambdaBasicExecutionRole\\"
              ]
            ]
          }
        ]
      }
    },
    \\"LambdaApiHelloServiceRoleDefaultPolicyA20AA335\\": {
      \\"Type\\": \\"AWS::IAM::Policy\\",
      \\"Properties\\": {
        \\"PolicyDocument\\": {
          \\"Statement\\": [
            {
              \\"Action\\": \\"dynamodb:*\\",
              \\"Effect\\": \\"Allow\\",
              \\"Resource\\": [
                {
                  \\"Fn::Join\\": [
                    \\"\\",
                    [
                      \\"arn:aws:dynamodb:\\",
                      {
                        \\"Ref\\": \\"AWS::Region\\"
                      },
                      \\":*:table/TABLE\\"
                    ]
                  ]
                },
                {
                  \\"Fn::Join\\": [
                    \\"\\",
                    [
                      \\"arn:aws:dynamodb:\\",
                      {
                        \\"Ref\\": \\"AWS::Region\\"
                      },
                      \\":*:table/TABLE/index/*\\"
                    ]
                  ]
                }
              ]
            },
            {
              \\"Action\\": \\"s3:*\\",
              \\"Effect\\": \\"Allow\\",
              \\"Resource\\": [
                \\"arn:aws:s3:::BUCKET\\",
                \\"arn:aws:s3:::BUCKET/*\\"
              ]
            }
          ],
          \\"Version\\": \\"2012-10-17\\"
        },
        \\"PolicyName\\": \\"LambdaApiHelloServiceRoleDefaultPolicyA20AA335\\",
        \\"Roles\\": [
          {
            \\"Ref\\": \\"LambdaApiHelloServiceRole7B3F9417\\"
          }
        ]
      }
    },
    \\"LambdaApiHelloA9D6B516\\": {
      \\"Type\\": \\"AWS::Lambda::Function\\",
      \\"Properties\\": {
        \\"Code\\": {
          \\"S3Bucket\\": {
            \\"Ref\\": \\"AssetParametersf07ecf78d8de4fd74f5fe314bf9505be390b1cc665ccc5b05ef8ce4aeed2be62S3Bucket60B0362A\\"
          },
          \\"S3Key\\": {
            \\"Fn::Join\\": [
              \\"\\",
              [
                {
                  \\"Fn::Select\\": [
                    0,
                    {
                      \\"Fn::Split\\": [
                        \\"||\\",
                        {
                          \\"Ref\\": \\"AssetParametersf07ecf78d8de4fd74f5fe314bf9505be390b1cc665ccc5b05ef8ce4aeed2be62S3VersionKey0758FFA8\\"
                        }
                      ]
                    }
                  ]
                },
                {
                  \\"Fn::Select\\": [
                    1,
                    {
                      \\"Fn::Split\\": [
                        \\"||\\",
                        {
                          \\"Ref\\": \\"AssetParametersf07ecf78d8de4fd74f5fe314bf9505be390b1cc665ccc5b05ef8ce4aeed2be62S3VersionKey0758FFA8\\"
                        }
                      ]
                    }
                  ]
                }
              ]
            ]
          }
        },
        \\"Handler\\": \\"index.handler\\",
        \\"Role\\": {
          \\"Fn::GetAtt\\": [
            \\"LambdaApiHelloServiceRole7B3F9417\\",
            \\"Arn\\"
          ]
        },
        \\"Runtime\\": \\"nodejs12.x\\"
      },
      \\"DependsOn\\": [
        \\"LambdaApiHelloServiceRoleDefaultPolicyA20AA335\\",
        \\"LambdaApiHelloServiceRole7B3F9417\\"
      ]
    }
  },
  \\"Outputs\\": {
    \\"LambdaApiTestApiEndpoint14C92933\\": {
      \\"Value\\": {
        \\"Fn::Join\\": [
          \\"\\",
          [
            \\"https://\\",
            {
              \\"Ref\\": \\"LambdaApiTestApiCDC7EDDF\\"
            },
            \\".execute-api.\\",
            {
              \\"Ref\\": \\"AWS::Region\\"
            },
            \\".\\",
            {
              \\"Ref\\": \\"AWS::URLSuffix\\"
            },
            \\"/\\",
            {
              \\"Ref\\": \\"LambdaApiTestApiDeploymentStageprod7DCB485F\\"
            },
            \\"/\\"
          ]
        ]
      }
    }
  },
  \\"Parameters\\": {
    \\"AssetParametersf07ecf78d8de4fd74f5fe314bf9505be390b1cc665ccc5b05ef8ce4aeed2be62S3Bucket60B0362A\\": {
      \\"Type\\": \\"String\\",
      \\"Description\\": \\"S3 bucket for asset \\\\\\"f07ecf78d8de4fd74f5fe314bf9505be390b1cc665ccc5b05ef8ce4aeed2be62\\\\\\"\\"
    },
    \\"AssetParametersf07ecf78d8de4fd74f5fe314bf9505be390b1cc665ccc5b05ef8ce4aeed2be62S3VersionKey0758FFA8\\": {
      \\"Type\\": \\"String\\",
      \\"Description\\": \\"S3 key for asset version \\\\\\"f07ecf78d8de4fd74f5fe314bf9505be390b1cc665ccc5b05ef8ce4aeed2be62\\\\\\"\\"
    },
    \\"AssetParametersf07ecf78d8de4fd74f5fe314bf9505be390b1cc665ccc5b05ef8ce4aeed2be62ArtifactHashD1B4CB31\\": {
      \\"Type\\": \\"String\\",
      \\"Description\\": \\"Artifact hash for asset \\\\\\"f07ecf78d8de4fd74f5fe314bf9505be390b1cc665ccc5b05ef8ce4aeed2be62\\\\\\"\\"
    }
  }
}"
`;

exports[`LambdaApiConstruct (layers) synthetizes properly 1`] = `
"{
  \\"Resources\\": {
    \\"LambdaApiTestApiCDC7EDDF\\": {
      \\"Type\\": \\"AWS::ApiGateway::RestApi\\",
      \\"Properties\\": {
        \\"Name\\": \\"TestApi\\"
      }
    },
    \\"LambdaApiTestApiDeploymentC09FA65F3203932b7210765647843d6fd51bb09e\\": {
      \\"Type\\": \\"AWS::ApiGateway::Deployment\\",
      \\"Properties\\": {
        \\"RestApiId\\": {
          \\"Ref\\": \\"LambdaApiTestApiCDC7EDDF\\"
        },
        \\"Description\\": \\"Automatically created by the RestApi construct\\"
      },
      \\"DependsOn\\": [
        \\"LambdaApiTestApihelloidGETC46CEBC1\\",
        \\"LambdaApiTestApihelloid2F778A8B\\",
        \\"LambdaApiTestApihelloOPTIONS0D3F2434\\",
        \\"LambdaApiTestApihello287B32B7\\"
      ]
    },
    \\"LambdaApiTestApiDeploymentStageprod7DCB485F\\": {
      \\"Type\\": \\"AWS::ApiGateway::Stage\\",
      \\"Properties\\": {
        \\"RestApiId\\": {
          \\"Ref\\": \\"LambdaApiTestApiCDC7EDDF\\"
        },
        \\"DeploymentId\\": {
          \\"Ref\\": \\"LambdaApiTestApiDeploymentC09FA65F3203932b7210765647843d6fd51bb09e\\"
        },
        \\"StageName\\": \\"prod\\"
      }
    },
    \\"LambdaApiTestApiCloudWatchRole0731508D\\": {
      \\"Type\\": \\"AWS::IAM::Role\\",
      \\"Properties\\": {
        \\"AssumeRolePolicyDocument\\": {
          \\"Statement\\": [
            {
              \\"Action\\": \\"sts:AssumeRole\\",
              \\"Effect\\": \\"Allow\\",
              \\"Principal\\": {
                \\"Service\\": \\"apigateway.amazonaws.com\\"
              }
            }
          ],
          \\"Version\\": \\"2012-10-17\\"
        },
        \\"ManagedPolicyArns\\": [
          {
            \\"Fn::Join\\": [
              \\"\\",
              [
                \\"arn:\\",
                {
                  \\"Ref\\": \\"AWS::Partition\\"
                },
                \\":iam::aws:policy/service-role/AmazonAPIGatewayPushToCloudWatchLogs\\"
              ]
            ]
          }
        ]
      }
    },
    \\"LambdaApiTestApiAccount4308A17A\\": {
      \\"Type\\": \\"AWS::ApiGateway::Account\\",
      \\"Properties\\": {
        \\"CloudWatchRoleArn\\": {
          \\"Fn::GetAtt\\": [
            \\"LambdaApiTestApiCloudWatchRole0731508D\\",
            \\"Arn\\"
          ]
        }
      },
      \\"DependsOn\\": [
        \\"LambdaApiTestApiCDC7EDDF\\"
      ]
    },
    \\"LambdaApiTestApihello287B32B7\\": {
      \\"Type\\": \\"AWS::ApiGateway::Resource\\",
      \\"Properties\\": {
        \\"ParentId\\": {
          \\"Fn::GetAtt\\": [
            \\"LambdaApiTestApiCDC7EDDF\\",
            \\"RootResourceId\\"
          ]
        },
        \\"PathPart\\": \\"hello\\",
        \\"RestApiId\\": {
          \\"Ref\\": \\"LambdaApiTestApiCDC7EDDF\\"
        }
      }
    },
    \\"LambdaApiTestApihelloOPTIONS0D3F2434\\": {
      \\"Type\\": \\"AWS::ApiGateway::Method\\",
      \\"Properties\\": {
        \\"HttpMethod\\": \\"OPTIONS\\",
        \\"ResourceId\\": {
          \\"Ref\\": \\"LambdaApiTestApihello287B32B7\\"
        },
        \\"RestApiId\\": {
          \\"Ref\\": \\"LambdaApiTestApiCDC7EDDF\\"
        },
        \\"AuthorizationType\\": \\"NONE\\",
        \\"Integration\\": {
          \\"IntegrationResponses\\": [
            {
              \\"ResponseParameters\\": {
                \\"method.response.header.Access-Control-Allow-Headers\\": \\"'Content-Type,X-Amz-Date,Authorization,X-Api-Key,X-Amz-Security-Token'\\",
                \\"method.response.header.Access-Control-Allow-Origin\\": \\"'*'\\",
                \\"method.response.header.Access-Control-Allow-Credentials\\": \\"'false'\\",
                \\"method.response.header.Access-Control-Allow-Methods\\": \\"'OPTIONS,GET'\\"
              },
              \\"StatusCode\\": \\"200\\"
            }
          ],
          \\"PassthroughBehavior\\": \\"NEVER\\",
          \\"RequestTemplates\\": {
            \\"application/json\\": \\"{\\\\\\"statusCode\\\\\\": 200}\\"
          },
          \\"Type\\": \\"MOCK\\"
        },
        \\"MethodResponses\\": [
          {
            \\"ResponseParameters\\": {
              \\"method.response.header.Access-Control-Allow-Headers\\": true,
              \\"method.response.header.Access-Control-Allow-Methods\\": true,
              \\"method.response.header.Access-Control-Allow-Credentials\\": true,
              \\"method.response.header.Access-Control-Allow-Origin\\": true
            },
            \\"StatusCode\\": \\"200\\"
          }
        ]
      }
    },
    \\"LambdaApiTestApihelloid2F778A8B\\": {
      \\"Type\\": \\"AWS::ApiGateway::Resource\\",
      \\"Properties\\": {
        \\"ParentId\\": {
          \\"Ref\\": \\"LambdaApiTestApihello287B32B7\\"
        },
        \\"PathPart\\": \\"{id}\\",
        \\"RestApiId\\": {
          \\"Ref\\": \\"LambdaApiTestApiCDC7EDDF\\"
        }
      }
    },
    \\"LambdaApiTestApihelloidGETApiPermissionStackLambdaApiTestApiCA7E01A2GEThelloid49B479D1\\": {
      \\"Type\\": \\"AWS::Lambda::Permission\\",
      \\"Properties\\": {
        \\"Action\\": \\"lambda:InvokeFunction\\",
        \\"FunctionName\\": {
          \\"Fn::GetAtt\\": [
            \\"LambdaApiHelloA9D6B516\\",
            \\"Arn\\"
          ]
        },
        \\"Principal\\": \\"apigateway.amazonaws.com\\",
        \\"SourceArn\\": {
          \\"Fn::Join\\": [
            \\"\\",
            [
              \\"arn:\\",
              {
                \\"Ref\\": \\"AWS::Partition\\"
              },
              \\":execute-api:\\",
              {
                \\"Ref\\": \\"AWS::Region\\"
              },
              \\":\\",
              {
                \\"Ref\\": \\"AWS::AccountId\\"
              },
              \\":\\",
              {
                \\"Ref\\": \\"LambdaApiTestApiCDC7EDDF\\"
              },
              \\"/\\",
              {
                \\"Ref\\": \\"LambdaApiTestApiDeploymentStageprod7DCB485F\\"
              },
              \\"/GET/hello/{id}\\"
            ]
          ]
        }
      }
    },
    \\"LambdaApiTestApihelloidGETApiPermissionTestStackLambdaApiTestApiCA7E01A2GEThelloid76F978CF\\": {
      \\"Type\\": \\"AWS::Lambda::Permission\\",
      \\"Properties\\": {
        \\"Action\\": \\"lambda:InvokeFunction\\",
        \\"FunctionName\\": {
          \\"Fn::GetAtt\\": [
            \\"LambdaApiHelloA9D6B516\\",
            \\"Arn\\"
          ]
        },
        \\"Principal\\": \\"apigateway.amazonaws.com\\",
        \\"SourceArn\\": {
          \\"Fn::Join\\": [
            \\"\\",
            [
              \\"arn:\\",
              {
                \\"Ref\\": \\"AWS::Partition\\"
              },
              \\":execute-api:\\",
              {
                \\"Ref\\": \\"AWS::Region\\"
              },
              \\":\\",
              {
                \\"Ref\\": \\"AWS::AccountId\\"
              },
              \\":\\",
              {
                \\"Ref\\": \\"LambdaApiTestApiCDC7EDDF\\"
              },
              \\"/test-invoke-stage/GET/hello/{id}\\"
            ]
          ]
        }
      }
    },
    \\"LambdaApiTestApihelloidGETC46CEBC1\\": {
      \\"Type\\": \\"AWS::ApiGateway::Method\\",
      \\"Properties\\": {
        \\"HttpMethod\\": \\"GET\\",
        \\"ResourceId\\": {
          \\"Ref\\": \\"LambdaApiTestApihelloid2F778A8B\\"
        },
        \\"RestApiId\\": {
          \\"Ref\\": \\"LambdaApiTestApiCDC7EDDF\\"
        },
        \\"AuthorizationType\\": \\"COGNITO_USER_POOLS\\",
        \\"AuthorizerId\\": {
          \\"Ref\\": \\"LambdaApiAuthorizer8AC8C11E\\"
        },
        \\"Integration\\": {
          \\"IntegrationHttpMethod\\": \\"POST\\",
          \\"Type\\": \\"AWS_PROXY\\",
          \\"Uri\\": {
            \\"Fn::Join\\": [
              \\"\\",
              [
                \\"arn:\\",
                {
                  \\"Ref\\": \\"AWS::Partition\\"
                },
                \\":apigateway:\\",
                {
                  \\"Ref\\": \\"AWS::Region\\"
                },
                \\":lambda:path/2015-03-31/functions/\\",
                {
                  \\"Fn::GetAtt\\": [
                    \\"LambdaApiHelloA9D6B516\\",
                    \\"Arn\\"
                  ]
                },
                \\"/invocations\\"
              ]
            ]
          }
        }
      }
    },
    \\"LambdaApiAuthorizer8AC8C11E\\": {
      \\"Type\\": \\"AWS::ApiGateway::Authorizer\\",
      \\"Properties\\": {
        \\"RestApiId\\": {
          \\"Ref\\": \\"LambdaApiTestApiCDC7EDDF\\"
        },
        \\"Type\\": \\"COGNITO_USER_POOLS\\",
        \\"IdentitySource\\": \\"method.request.header.Authorization\\",
        \\"Name\\": \\"authorizer\\",
        \\"ProviderARNs\\": [
          {
            \\"Fn::Join\\": [
              \\"\\",
              [
                \\"arn:aws:cognito-idp:\\",
                {
                  \\"Ref\\": \\"AWS::Region\\"
                },
                \\":\\",
                {
                  \\"Ref\\": \\"AWS::AccountId\\"
                },
                \\":userpool/us-east-1_abcdefgh\\"
              ]
            ]
          }
        ]
      }
    },
    \\"LambdaApiLayersCommonLibsB5C11B1B\\": {
      \\"Type\\": \\"AWS::Lambda::LayerVersion\\",
      \\"Properties\\": {
        \\"Content\\": {
          \\"S3Bucket\\": {
            \\"Ref\\": \\"AssetParameters5f62dc150d5089f201a79912ea18fb499ae7f464bccae731f330d83e0174f19fS3BucketBB264C4C\\"
          },
          \\"S3Key\\": {
            \\"Fn::Join\\": [
              \\"\\",
              [
                {
                  \\"Fn::Select\\": [
                    0,
                    {
                      \\"Fn::Split\\": [
                        \\"||\\",
                        {
                          \\"Ref\\": \\"AssetParameters5f62dc150d5089f201a79912ea18fb499ae7f464bccae731f330d83e0174f19fS3VersionKeyDFC08D8B\\"
                        }
                      ]
                    }
                  ]
                },
                {
                  \\"Fn::Select\\": [
                    1,
                    {
                      \\"Fn::Split\\": [
                        \\"||\\",
                        {
                          \\"Ref\\": \\"AssetParameters5f62dc150d5089f201a79912ea18fb499ae7f464bccae731f330d83e0174f19fS3VersionKeyDFC08D8B\\"
                        }
                      ]
                    }
                  ]
                }
              ]
            ]
          }
        },
        \\"CompatibleRuntimes\\": [
          \\"nodejs12.x\\"
        ],
        \\"Description\\": \\"Common NodeJS Libraries\\",
        \\"LicenseInfo\\": \\"MIT\\"
      }
    },
    \\"LambdaApiHelloServiceRole7B3F9417\\": {
      \\"Type\\": \\"AWS::IAM::Role\\",
      \\"Properties\\": {
        \\"AssumeRolePolicyDocument\\": {
          \\"Statement\\": [
            {
              \\"Action\\": \\"sts:AssumeRole\\",
              \\"Effect\\": \\"Allow\\",
              \\"Principal\\": {
                \\"Service\\": \\"lambda.amazonaws.com\\"
              }
            }
          ],
          \\"Version\\": \\"2012-10-17\\"
        },
        \\"ManagedPolicyArns\\": [
          {
            \\"Fn::Join\\": [
              \\"\\",
              [
                \\"arn:\\",
                {
                  \\"Ref\\": \\"AWS::Partition\\"
                },
                \\":iam::aws:policy/service-role/AWSLambdaBasicExecutionRole\\"
              ]
            ]
          }
        ]
      }
    },
    \\"LambdaApiHelloA9D6B516\\": {
      \\"Type\\": \\"AWS::Lambda::Function\\",
      \\"Properties\\": {
        \\"Code\\": {
          \\"S3Bucket\\": {
            \\"Ref\\": \\"AssetParametersf07ecf78d8de4fd74f5fe314bf9505be390b1cc665ccc5b05ef8ce4aeed2be62S3Bucket60B0362A\\"
          },
          \\"S3Key\\": {
            \\"Fn::Join\\": [
              \\"\\",
              [
                {
                  \\"Fn::Select\\": [
                    0,
                    {
                      \\"Fn::Split\\": [
                        \\"||\\",
                        {
                          \\"Ref\\": \\"AssetParametersf07ecf78d8de4fd74f5fe314bf9505be390b1cc665ccc5b05ef8ce4aeed2be62S3VersionKey0758FFA8\\"
                        }
                      ]
                    }
                  ]
                },
                {
                  \\"Fn::Select\\": [
                    1,
                    {
                      \\"Fn::Split\\": [
                        \\"||\\",
                        {
                          \\"Ref\\": \\"AssetParametersf07ecf78d8de4fd74f5fe314bf9505be390b1cc665ccc5b05ef8ce4aeed2be62S3VersionKey0758FFA8\\"
                        }
                      ]
                    }
                  ]
                }
              ]
            ]
          }
        },
        \\"Handler\\": \\"index.handler\\",
        \\"Role\\": {
          \\"Fn::GetAtt\\": [
            \\"LambdaApiHelloServiceRole7B3F9417\\",
            \\"Arn\\"
          ]
        },
        \\"Runtime\\": \\"nodejs12.x\\",
        \\"Layers\\": [
          {
            \\"Ref\\": \\"LambdaApiLayersCommonLibsB5C11B1B\\"
          }
        ]
      },
      \\"DependsOn\\": [
        \\"LambdaApiHelloServiceRole7B3F9417\\"
      ]
    }
  },
  \\"Outputs\\": {
    \\"LambdaApiTestApiEndpoint14C92933\\": {
      \\"Value\\": {
        \\"Fn::Join\\": [
          \\"\\",
          [
            \\"https://\\",
            {
              \\"Ref\\": \\"LambdaApiTestApiCDC7EDDF\\"
            },
            \\".execute-api.\\",
            {
              \\"Ref\\": \\"AWS::Region\\"
            },
            \\".\\",
            {
              \\"Ref\\": \\"AWS::URLSuffix\\"
            },
            \\"/\\",
            {
              \\"Ref\\": \\"LambdaApiTestApiDeploymentStageprod7DCB485F\\"
            },
            \\"/\\"
          ]
        ]
      }
    }
  },
  \\"Parameters\\": {
    \\"AssetParameters5f62dc150d5089f201a79912ea18fb499ae7f464bccae731f330d83e0174f19fS3BucketBB264C4C\\": {
      \\"Type\\": \\"String\\",
      \\"Description\\": \\"S3 bucket for asset \\\\\\"5f62dc150d5089f201a79912ea18fb499ae7f464bccae731f330d83e0174f19f\\\\\\"\\"
    },
    \\"AssetParameters5f62dc150d5089f201a79912ea18fb499ae7f464bccae731f330d83e0174f19fS3VersionKeyDFC08D8B\\": {
      \\"Type\\": \\"String\\",
      \\"Description\\": \\"S3 key for asset version \\\\\\"5f62dc150d5089f201a79912ea18fb499ae7f464bccae731f330d83e0174f19f\\\\\\"\\"
    },
    \\"AssetParameters5f62dc150d5089f201a79912ea18fb499ae7f464bccae731f330d83e0174f19fArtifactHashD64F3F0A\\": {
      \\"Type\\": \\"String\\",
      \\"Description\\": \\"Artifact hash for asset \\\\\\"5f62dc150d5089f201a79912ea18fb499ae7f464bccae731f330d83e0174f19f\\\\\\"\\"
    },
    \\"AssetParametersf07ecf78d8de4fd74f5fe314bf9505be390b1cc665ccc5b05ef8ce4aeed2be62S3Bucket60B0362A\\": {
      \\"Type\\": \\"String\\",
      \\"Description\\": \\"S3 bucket for asset \\\\\\"f07ecf78d8de4fd74f5fe314bf9505be390b1cc665ccc5b05ef8ce4aeed2be62\\\\\\"\\"
    },
    \\"AssetParametersf07ecf78d8de4fd74f5fe314bf9505be390b1cc665ccc5b05ef8ce4aeed2be62S3VersionKey0758FFA8\\": {
      \\"Type\\": \\"String\\",
      \\"Description\\": \\"S3 key for asset version \\\\\\"f07ecf78d8de4fd74f5fe314bf9505be390b1cc665ccc5b05ef8ce4aeed2be62\\\\\\"\\"
    },
    \\"AssetParametersf07ecf78d8de4fd74f5fe314bf9505be390b1cc665ccc5b05ef8ce4aeed2be62ArtifactHashD1B4CB31\\": {
      \\"Type\\": \\"String\\",
      \\"Description\\": \\"Artifact hash for asset \\\\\\"f07ecf78d8de4fd74f5fe314bf9505be390b1cc665ccc5b05ef8ce4aeed2be62\\\\\\"\\"
    }
  }
}"
`;

exports[`LambdaApiConstruct (protected) synthetizes properly 1`] = `
"{
  \\"Resources\\": {
    \\"LambdaApiTestApiCDC7EDDF\\": {
      \\"Type\\": \\"AWS::ApiGateway::RestApi\\",
      \\"Properties\\": {
        \\"Name\\": \\"TestApi\\"
      }
    },
    \\"LambdaApiTestApiDeploymentC09FA65F3203932b7210765647843d6fd51bb09e\\": {
      \\"Type\\": \\"AWS::ApiGateway::Deployment\\",
      \\"Properties\\": {
        \\"RestApiId\\": {
          \\"Ref\\": \\"LambdaApiTestApiCDC7EDDF\\"
        },
        \\"Description\\": \\"Automatically created by the RestApi construct\\"
      },
      \\"DependsOn\\": [
        \\"LambdaApiTestApihelloidGETC46CEBC1\\",
        \\"LambdaApiTestApihelloid2F778A8B\\",
        \\"LambdaApiTestApihelloOPTIONS0D3F2434\\",
        \\"LambdaApiTestApihello287B32B7\\"
      ]
    },
    \\"LambdaApiTestApiDeploymentStageprod7DCB485F\\": {
      \\"Type\\": \\"AWS::ApiGateway::Stage\\",
      \\"Properties\\": {
        \\"RestApiId\\": {
          \\"Ref\\": \\"LambdaApiTestApiCDC7EDDF\\"
        },
        \\"DeploymentId\\": {
          \\"Ref\\": \\"LambdaApiTestApiDeploymentC09FA65F3203932b7210765647843d6fd51bb09e\\"
        },
        \\"StageName\\": \\"prod\\"
      }
    },
    \\"LambdaApiTestApiCloudWatchRole0731508D\\": {
      \\"Type\\": \\"AWS::IAM::Role\\",
      \\"Properties\\": {
        \\"AssumeRolePolicyDocument\\": {
          \\"Statement\\": [
            {
              \\"Action\\": \\"sts:AssumeRole\\",
              \\"Effect\\": \\"Allow\\",
              \\"Principal\\": {
                \\"Service\\": \\"apigateway.amazonaws.com\\"
              }
            }
          ],
          \\"Version\\": \\"2012-10-17\\"
        },
        \\"ManagedPolicyArns\\": [
          {
            \\"Fn::Join\\": [
              \\"\\",
              [
                \\"arn:\\",
                {
                  \\"Ref\\": \\"AWS::Partition\\"
                },
                \\":iam::aws:policy/service-role/AmazonAPIGatewayPushToCloudWatchLogs\\"
              ]
            ]
          }
        ]
      }
    },
    \\"LambdaApiTestApiAccount4308A17A\\": {
      \\"Type\\": \\"AWS::ApiGateway::Account\\",
      \\"Properties\\": {
        \\"CloudWatchRoleArn\\": {
          \\"Fn::GetAtt\\": [
            \\"LambdaApiTestApiCloudWatchRole0731508D\\",
            \\"Arn\\"
          ]
        }
      },
      \\"DependsOn\\": [
        \\"LambdaApiTestApiCDC7EDDF\\"
      ]
    },
    \\"LambdaApiTestApihello287B32B7\\": {
      \\"Type\\": \\"AWS::ApiGateway::Resource\\",
      \\"Properties\\": {
        \\"ParentId\\": {
          \\"Fn::GetAtt\\": [
            \\"LambdaApiTestApiCDC7EDDF\\",
            \\"RootResourceId\\"
          ]
        },
        \\"PathPart\\": \\"hello\\",
        \\"RestApiId\\": {
          \\"Ref\\": \\"LambdaApiTestApiCDC7EDDF\\"
        }
      }
    },
    \\"LambdaApiTestApihelloOPTIONS0D3F2434\\": {
      \\"Type\\": \\"AWS::ApiGateway::Method\\",
      \\"Properties\\": {
        \\"HttpMethod\\": \\"OPTIONS\\",
        \\"ResourceId\\": {
          \\"Ref\\": \\"LambdaApiTestApihello287B32B7\\"
        },
        \\"RestApiId\\": {
          \\"Ref\\": \\"LambdaApiTestApiCDC7EDDF\\"
        },
        \\"AuthorizationType\\": \\"NONE\\",
        \\"Integration\\": {
          \\"IntegrationResponses\\": [
            {
              \\"ResponseParameters\\": {
                \\"method.response.header.Access-Control-Allow-Headers\\": \\"'Content-Type,X-Amz-Date,Authorization,X-Api-Key,X-Amz-Security-Token'\\",
                \\"method.response.header.Access-Control-Allow-Origin\\": \\"'*'\\",
                \\"method.response.header.Access-Control-Allow-Credentials\\": \\"'false'\\",
                \\"method.response.header.Access-Control-Allow-Methods\\": \\"'OPTIONS,GET'\\"
              },
              \\"StatusCode\\": \\"200\\"
            }
          ],
          \\"PassthroughBehavior\\": \\"NEVER\\",
          \\"RequestTemplates\\": {
            \\"application/json\\": \\"{\\\\\\"statusCode\\\\\\": 200}\\"
          },
          \\"Type\\": \\"MOCK\\"
        },
        \\"MethodResponses\\": [
          {
            \\"ResponseParameters\\": {
              \\"method.response.header.Access-Control-Allow-Headers\\": true,
              \\"method.response.header.Access-Control-Allow-Methods\\": true,
              \\"method.response.header.Access-Control-Allow-Credentials\\": true,
              \\"method.response.header.Access-Control-Allow-Origin\\": true
            },
            \\"StatusCode\\": \\"200\\"
          }
        ]
      }
    },
    \\"LambdaApiTestApihelloid2F778A8B\\": {
      \\"Type\\": \\"AWS::ApiGateway::Resource\\",
      \\"Properties\\": {
        \\"ParentId\\": {
          \\"Ref\\": \\"LambdaApiTestApihello287B32B7\\"
        },
        \\"PathPart\\": \\"{id}\\",
        \\"RestApiId\\": {
          \\"Ref\\": \\"LambdaApiTestApiCDC7EDDF\\"
        }
      }
    },
    \\"LambdaApiTestApihelloidGETApiPermissionStackLambdaApiTestApiCA7E01A2GEThelloid49B479D1\\": {
      \\"Type\\": \\"AWS::Lambda::Permission\\",
      \\"Properties\\": {
        \\"Action\\": \\"lambda:InvokeFunction\\",
        \\"FunctionName\\": {
          \\"Fn::GetAtt\\": [
            \\"LambdaApiHelloA9D6B516\\",
            \\"Arn\\"
          ]
        },
        \\"Principal\\": \\"apigateway.amazonaws.com\\",
        \\"SourceArn\\": {
          \\"Fn::Join\\": [
            \\"\\",
            [
              \\"arn:\\",
              {
                \\"Ref\\": \\"AWS::Partition\\"
              },
              \\":execute-api:\\",
              {
                \\"Ref\\": \\"AWS::Region\\"
              },
              \\":\\",
              {
                \\"Ref\\": \\"AWS::AccountId\\"
              },
              \\":\\",
              {
                \\"Ref\\": \\"LambdaApiTestApiCDC7EDDF\\"
              },
              \\"/\\",
              {
                \\"Ref\\": \\"LambdaApiTestApiDeploymentStageprod7DCB485F\\"
              },
              \\"/GET/hello/{id}\\"
            ]
          ]
        }
      }
    },
    \\"LambdaApiTestApihelloidGETApiPermissionTestStackLambdaApiTestApiCA7E01A2GEThelloid76F978CF\\": {
      \\"Type\\": \\"AWS::Lambda::Permission\\",
      \\"Properties\\": {
        \\"Action\\": \\"lambda:InvokeFunction\\",
        \\"FunctionName\\": {
          \\"Fn::GetAtt\\": [
            \\"LambdaApiHelloA9D6B516\\",
            \\"Arn\\"
          ]
        },
        \\"Principal\\": \\"apigateway.amazonaws.com\\",
        \\"SourceArn\\": {
          \\"Fn::Join\\": [
            \\"\\",
            [
              \\"arn:\\",
              {
                \\"Ref\\": \\"AWS::Partition\\"
              },
              \\":execute-api:\\",
              {
                \\"Ref\\": \\"AWS::Region\\"
              },
              \\":\\",
              {
                \\"Ref\\": \\"AWS::AccountId\\"
              },
              \\":\\",
              {
                \\"Ref\\": \\"LambdaApiTestApiCDC7EDDF\\"
              },
              \\"/test-invoke-stage/GET/hello/{id}\\"
            ]
          ]
        }
      }
    },
    \\"LambdaApiTestApihelloidGETC46CEBC1\\": {
      \\"Type\\": \\"AWS::ApiGateway::Method\\",
      \\"Properties\\": {
        \\"HttpMethod\\": \\"GET\\",
        \\"ResourceId\\": {
          \\"Ref\\": \\"LambdaApiTestApihelloid2F778A8B\\"
        },
        \\"RestApiId\\": {
          \\"Ref\\": \\"LambdaApiTestApiCDC7EDDF\\"
        },
        \\"AuthorizationType\\": \\"COGNITO_USER_POOLS\\",
        \\"AuthorizerId\\": {
          \\"Ref\\": \\"LambdaApiAuthorizer8AC8C11E\\"
        },
        \\"Integration\\": {
          \\"IntegrationHttpMethod\\": \\"POST\\",
          \\"Type\\": \\"AWS_PROXY\\",
          \\"Uri\\": {
            \\"Fn::Join\\": [
              \\"\\",
              [
                \\"arn:\\",
                {
                  \\"Ref\\": \\"AWS::Partition\\"
                },
                \\":apigateway:\\",
                {
                  \\"Ref\\": \\"AWS::Region\\"
                },
                \\":lambda:path/2015-03-31/functions/\\",
                {
                  \\"Fn::GetAtt\\": [
                    \\"LambdaApiHelloA9D6B516\\",
                    \\"Arn\\"
                  ]
                },
                \\"/invocations\\"
              ]
            ]
          }
        }
      }
    },
    \\"LambdaApiAuthorizer8AC8C11E\\": {
      \\"Type\\": \\"AWS::ApiGateway::Authorizer\\",
      \\"Properties\\": {
        \\"RestApiId\\": {
          \\"Ref\\": \\"LambdaApiTestApiCDC7EDDF\\"
        },
        \\"Type\\": \\"COGNITO_USER_POOLS\\",
        \\"IdentitySource\\": \\"method.request.header.Authorization\\",
        \\"Name\\": \\"authorizer\\",
        \\"ProviderARNs\\": [
          {
            \\"Fn::Join\\": [
              \\"\\",
              [
                \\"arn:aws:cognito-idp:\\",
                {
                  \\"Ref\\": \\"AWS::Region\\"
                },
                \\":\\",
                {
                  \\"Ref\\": \\"AWS::AccountId\\"
                },
                \\":userpool/us-east-1_abcdefgh\\"
              ]
            ]
          }
        ]
      }
    },
    \\"LambdaApiHelloServiceRole7B3F9417\\": {
      \\"Type\\": \\"AWS::IAM::Role\\",
      \\"Properties\\": {
        \\"AssumeRolePolicyDocument\\": {
          \\"Statement\\": [
            {
              \\"Action\\": \\"sts:AssumeRole\\",
              \\"Effect\\": \\"Allow\\",
              \\"Principal\\": {
                \\"Service\\": \\"lambda.amazonaws.com\\"
              }
            }
          ],
          \\"Version\\": \\"2012-10-17\\"
        },
        \\"ManagedPolicyArns\\": [
          {
            \\"Fn::Join\\": [
              \\"\\",
              [
                \\"arn:\\",
                {
                  \\"Ref\\": \\"AWS::Partition\\"
                },
                \\":iam::aws:policy/service-role/AWSLambdaBasicExecutionRole\\"
              ]
            ]
          }
        ]
      }
    },
    \\"LambdaApiHelloA9D6B516\\": {
      \\"Type\\": \\"AWS::Lambda::Function\\",
      \\"Properties\\": {
        \\"Code\\": {
          \\"S3Bucket\\": {
            \\"Ref\\": \\"AssetParametersf07ecf78d8de4fd74f5fe314bf9505be390b1cc665ccc5b05ef8ce4aeed2be62S3Bucket60B0362A\\"
          },
          \\"S3Key\\": {
            \\"Fn::Join\\": [
              \\"\\",
              [
                {
                  \\"Fn::Select\\": [
                    0,
                    {
                      \\"Fn::Split\\": [
                        \\"||\\",
                        {
                          \\"Ref\\": \\"AssetParametersf07ecf78d8de4fd74f5fe314bf9505be390b1cc665ccc5b05ef8ce4aeed2be62S3VersionKey0758FFA8\\"
                        }
                      ]
                    }
                  ]
                },
                {
                  \\"Fn::Select\\": [
                    1,
                    {
                      \\"Fn::Split\\": [
                        \\"||\\",
                        {
                          \\"Ref\\": \\"AssetParametersf07ecf78d8de4fd74f5fe314bf9505be390b1cc665ccc5b05ef8ce4aeed2be62S3VersionKey0758FFA8\\"
                        }
                      ]
                    }
                  ]
                }
              ]
            ]
          }
        },
        \\"Handler\\": \\"index.handler\\",
        \\"Role\\": {
          \\"Fn::GetAtt\\": [
            \\"LambdaApiHelloServiceRole7B3F9417\\",
            \\"Arn\\"
          ]
        },
        \\"Runtime\\": \\"nodejs12.x\\"
      },
      \\"DependsOn\\": [
        \\"LambdaApiHelloServiceRole7B3F9417\\"
      ]
    }
  },
  \\"Outputs\\": {
    \\"LambdaApiTestApiEndpoint14C92933\\": {
      \\"Value\\": {
        \\"Fn::Join\\": [
          \\"\\",
          [
            \\"https://\\",
            {
              \\"Ref\\": \\"LambdaApiTestApiCDC7EDDF\\"
            },
            \\".execute-api.\\",
            {
              \\"Ref\\": \\"AWS::Region\\"
            },
            \\".\\",
            {
              \\"Ref\\": \\"AWS::URLSuffix\\"
            },
            \\"/\\",
            {
              \\"Ref\\": \\"LambdaApiTestApiDeploymentStageprod7DCB485F\\"
            },
            \\"/\\"
          ]
        ]
      }
    }
  },
  \\"Parameters\\": {
    \\"AssetParametersf07ecf78d8de4fd74f5fe314bf9505be390b1cc665ccc5b05ef8ce4aeed2be62S3Bucket60B0362A\\": {
      \\"Type\\": \\"String\\",
      \\"Description\\": \\"S3 bucket for asset \\\\\\"f07ecf78d8de4fd74f5fe314bf9505be390b1cc665ccc5b05ef8ce4aeed2be62\\\\\\"\\"
    },
    \\"AssetParametersf07ecf78d8de4fd74f5fe314bf9505be390b1cc665ccc5b05ef8ce4aeed2be62S3VersionKey0758FFA8\\": {
      \\"Type\\": \\"String\\",
      \\"Description\\": \\"S3 key for asset version \\\\\\"f07ecf78d8de4fd74f5fe314bf9505be390b1cc665ccc5b05ef8ce4aeed2be62\\\\\\"\\"
    },
    \\"AssetParametersf07ecf78d8de4fd74f5fe314bf9505be390b1cc665ccc5b05ef8ce4aeed2be62ArtifactHashD1B4CB31\\": {
      \\"Type\\": \\"String\\",
      \\"Description\\": \\"Artifact hash for asset \\\\\\"f07ecf78d8de4fd74f5fe314bf9505be390b1cc665ccc5b05ef8ce4aeed2be62\\\\\\"\\"
    }
  }
}"
`;

exports[`LambdaApiConstruct synthetizes properly 1`] = `
"{
  \\"Resources\\": {
    \\"LambdaApiTestApiCDC7EDDF\\": {
      \\"Type\\": \\"AWS::ApiGateway::RestApi\\",
      \\"Properties\\": {
        \\"Name\\": \\"TestApi\\"
      }
    },
    \\"LambdaApiTestApiDeploymentC09FA65F3203932b7210765647843d6fd51bb09e\\": {
      \\"Type\\": \\"AWS::ApiGateway::Deployment\\",
      \\"Properties\\": {
        \\"RestApiId\\": {
          \\"Ref\\": \\"LambdaApiTestApiCDC7EDDF\\"
        },
        \\"Description\\": \\"Automatically created by the RestApi construct\\"
      },
      \\"DependsOn\\": [
        \\"LambdaApiTestApihelloidGETC46CEBC1\\",
        \\"LambdaApiTestApihelloid2F778A8B\\",
        \\"LambdaApiTestApihelloOPTIONS0D3F2434\\",
        \\"LambdaApiTestApihello287B32B7\\"
      ]
    },
    \\"LambdaApiTestApiDeploymentStageprod7DCB485F\\": {
      \\"Type\\": \\"AWS::ApiGateway::Stage\\",
      \\"Properties\\": {
        \\"RestApiId\\": {
          \\"Ref\\": \\"LambdaApiTestApiCDC7EDDF\\"
        },
        \\"DeploymentId\\": {
          \\"Ref\\": \\"LambdaApiTestApiDeploymentC09FA65F3203932b7210765647843d6fd51bb09e\\"
        },
        \\"StageName\\": \\"prod\\"
      }
    },
    \\"LambdaApiTestApiCloudWatchRole0731508D\\": {
      \\"Type\\": \\"AWS::IAM::Role\\",
      \\"Properties\\": {
        \\"AssumeRolePolicyDocument\\": {
          \\"Statement\\": [
            {
              \\"Action\\": \\"sts:AssumeRole\\",
              \\"Effect\\": \\"Allow\\",
              \\"Principal\\": {
                \\"Service\\": \\"apigateway.amazonaws.com\\"
              }
            }
          ],
          \\"Version\\": \\"2012-10-17\\"
        },
        \\"ManagedPolicyArns\\": [
          {
            \\"Fn::Join\\": [
              \\"\\",
              [
                \\"arn:\\",
                {
                  \\"Ref\\": \\"AWS::Partition\\"
                },
                \\":iam::aws:policy/service-role/AmazonAPIGatewayPushToCloudWatchLogs\\"
              ]
            ]
          }
        ]
      }
    },
    \\"LambdaApiTestApiAccount4308A17A\\": {
      \\"Type\\": \\"AWS::ApiGateway::Account\\",
      \\"Properties\\": {
        \\"CloudWatchRoleArn\\": {
          \\"Fn::GetAtt\\": [
            \\"LambdaApiTestApiCloudWatchRole0731508D\\",
            \\"Arn\\"
          ]
        }
      },
      \\"DependsOn\\": [
        \\"LambdaApiTestApiCDC7EDDF\\"
      ]
    },
    \\"LambdaApiTestApihello287B32B7\\": {
      \\"Type\\": \\"AWS::ApiGateway::Resource\\",
      \\"Properties\\": {
        \\"ParentId\\": {
          \\"Fn::GetAtt\\": [
            \\"LambdaApiTestApiCDC7EDDF\\",
            \\"RootResourceId\\"
          ]
        },
        \\"PathPart\\": \\"hello\\",
        \\"RestApiId\\": {
          \\"Ref\\": \\"LambdaApiTestApiCDC7EDDF\\"
        }
      }
    },
    \\"LambdaApiTestApihelloOPTIONS0D3F2434\\": {
      \\"Type\\": \\"AWS::ApiGateway::Method\\",
      \\"Properties\\": {
        \\"HttpMethod\\": \\"OPTIONS\\",
        \\"ResourceId\\": {
          \\"Ref\\": \\"LambdaApiTestApihello287B32B7\\"
        },
        \\"RestApiId\\": {
          \\"Ref\\": \\"LambdaApiTestApiCDC7EDDF\\"
        },
        \\"AuthorizationType\\": \\"NONE\\",
        \\"Integration\\": {
          \\"IntegrationResponses\\": [
            {
              \\"ResponseParameters\\": {
                \\"method.response.header.Access-Control-Allow-Headers\\": \\"'Content-Type,X-Amz-Date,Authorization,X-Api-Key,X-Amz-Security-Token'\\",
                \\"method.response.header.Access-Control-Allow-Origin\\": \\"'*'\\",
                \\"method.response.header.Access-Control-Allow-Credentials\\": \\"'false'\\",
                \\"method.response.header.Access-Control-Allow-Methods\\": \\"'OPTIONS,GET'\\"
              },
              \\"StatusCode\\": \\"200\\"
            }
          ],
          \\"PassthroughBehavior\\": \\"NEVER\\",
          \\"RequestTemplates\\": {
            \\"application/json\\": \\"{\\\\\\"statusCode\\\\\\": 200}\\"
          },
          \\"Type\\": \\"MOCK\\"
        },
        \\"MethodResponses\\": [
          {
            \\"ResponseParameters\\": {
              \\"method.response.header.Access-Control-Allow-Headers\\": true,
              \\"method.response.header.Access-Control-Allow-Methods\\": true,
              \\"method.response.header.Access-Control-Allow-Credentials\\": true,
              \\"method.response.header.Access-Control-Allow-Origin\\": true
            },
            \\"StatusCode\\": \\"200\\"
          }
        ]
      }
    },
    \\"LambdaApiTestApihelloid2F778A8B\\": {
      \\"Type\\": \\"AWS::ApiGateway::Resource\\",
      \\"Properties\\": {
        \\"ParentId\\": {
          \\"Ref\\": \\"LambdaApiTestApihello287B32B7\\"
        },
        \\"PathPart\\": \\"{id}\\",
        \\"RestApiId\\": {
          \\"Ref\\": \\"LambdaApiTestApiCDC7EDDF\\"
        }
      }
    },
    \\"LambdaApiTestApihelloidGETApiPermissionStackLambdaApiTestApiCA7E01A2GEThelloid49B479D1\\": {
      \\"Type\\": \\"AWS::Lambda::Permission\\",
      \\"Properties\\": {
        \\"Action\\": \\"lambda:InvokeFunction\\",
        \\"FunctionName\\": {
          \\"Fn::GetAtt\\": [
            \\"LambdaApiHelloA9D6B516\\",
            \\"Arn\\"
          ]
        },
        \\"Principal\\": \\"apigateway.amazonaws.com\\",
        \\"SourceArn\\": {
          \\"Fn::Join\\": [
            \\"\\",
            [
              \\"arn:\\",
              {
                \\"Ref\\": \\"AWS::Partition\\"
              },
              \\":execute-api:\\",
              {
                \\"Ref\\": \\"AWS::Region\\"
              },
              \\":\\",
              {
                \\"Ref\\": \\"AWS::AccountId\\"
              },
              \\":\\",
              {
                \\"Ref\\": \\"LambdaApiTestApiCDC7EDDF\\"
              },
              \\"/\\",
              {
                \\"Ref\\": \\"LambdaApiTestApiDeploymentStageprod7DCB485F\\"
              },
              \\"/GET/hello/{id}\\"
            ]
          ]
        }
      }
    },
    \\"LambdaApiTestApihelloidGETApiPermissionTestStackLambdaApiTestApiCA7E01A2GEThelloid76F978CF\\": {
      \\"Type\\": \\"AWS::Lambda::Permission\\",
      \\"Properties\\": {
        \\"Action\\": \\"lambda:InvokeFunction\\",
        \\"FunctionName\\": {
          \\"Fn::GetAtt\\": [
            \\"LambdaApiHelloA9D6B516\\",
            \\"Arn\\"
          ]
        },
        \\"Principal\\": \\"apigateway.amazonaws.com\\",
        \\"SourceArn\\": {
          \\"Fn::Join\\": [
            \\"\\",
            [
              \\"arn:\\",
              {
                \\"Ref\\": \\"AWS::Partition\\"
              },
              \\":execute-api:\\",
              {
                \\"Ref\\": \\"AWS::Region\\"
              },
              \\":\\",
              {
                \\"Ref\\": \\"AWS::AccountId\\"
              },
              \\":\\",
              {
                \\"Ref\\": \\"LambdaApiTestApiCDC7EDDF\\"
              },
              \\"/test-invoke-stage/GET/hello/{id}\\"
            ]
          ]
        }
      }
    },
    \\"LambdaApiTestApihelloidGETC46CEBC1\\": {
      \\"Type\\": \\"AWS::ApiGateway::Method\\",
      \\"Properties\\": {
        \\"HttpMethod\\": \\"GET\\",
        \\"ResourceId\\": {
          \\"Ref\\": \\"LambdaApiTestApihelloid2F778A8B\\"
        },
        \\"RestApiId\\": {
          \\"Ref\\": \\"LambdaApiTestApiCDC7EDDF\\"
        },
        \\"AuthorizationType\\": \\"NONE\\",
        \\"Integration\\": {
          \\"IntegrationHttpMethod\\": \\"POST\\",
          \\"Type\\": \\"AWS_PROXY\\",
          \\"Uri\\": {
            \\"Fn::Join\\": [
              \\"\\",
              [
                \\"arn:\\",
                {
                  \\"Ref\\": \\"AWS::Partition\\"
                },
                \\":apigateway:\\",
                {
                  \\"Ref\\": \\"AWS::Region\\"
                },
                \\":lambda:path/2015-03-31/functions/\\",
                {
                  \\"Fn::GetAtt\\": [
                    \\"LambdaApiHelloA9D6B516\\",
                    \\"Arn\\"
                  ]
                },
                \\"/invocations\\"
              ]
            ]
          }
        }
      }
    },
    \\"LambdaApiHelloServiceRole7B3F9417\\": {
      \\"Type\\": \\"AWS::IAM::Role\\",
      \\"Properties\\": {
        \\"AssumeRolePolicyDocument\\": {
          \\"Statement\\": [
            {
              \\"Action\\": \\"sts:AssumeRole\\",
              \\"Effect\\": \\"Allow\\",
              \\"Principal\\": {
                \\"Service\\": \\"lambda.amazonaws.com\\"
              }
            }
          ],
          \\"Version\\": \\"2012-10-17\\"
        },
        \\"ManagedPolicyArns\\": [
          {
            \\"Fn::Join\\": [
              \\"\\",
              [
                \\"arn:\\",
                {
                  \\"Ref\\": \\"AWS::Partition\\"
                },
                \\":iam::aws:policy/service-role/AWSLambdaBasicExecutionRole\\"
              ]
            ]
          }
        ]
      }
    },
    \\"LambdaApiHelloA9D6B516\\": {
      \\"Type\\": \\"AWS::Lambda::Function\\",
      \\"Properties\\": {
        \\"Code\\": {
          \\"S3Bucket\\": {
            \\"Ref\\": \\"AssetParametersf07ecf78d8de4fd74f5fe314bf9505be390b1cc665ccc5b05ef8ce4aeed2be62S3Bucket60B0362A\\"
          },
          \\"S3Key\\": {
            \\"Fn::Join\\": [
              \\"\\",
              [
                {
                  \\"Fn::Select\\": [
                    0,
                    {
                      \\"Fn::Split\\": [
                        \\"||\\",
                        {
                          \\"Ref\\": \\"AssetParametersf07ecf78d8de4fd74f5fe314bf9505be390b1cc665ccc5b05ef8ce4aeed2be62S3VersionKey0758FFA8\\"
                        }
                      ]
                    }
                  ]
                },
                {
                  \\"Fn::Select\\": [
                    1,
                    {
                      \\"Fn::Split\\": [
                        \\"||\\",
                        {
                          \\"Ref\\": \\"AssetParametersf07ecf78d8de4fd74f5fe314bf9505be390b1cc665ccc5b05ef8ce4aeed2be62S3VersionKey0758FFA8\\"
                        }
                      ]
                    }
                  ]
                }
              ]
            ]
          }
        },
        \\"Handler\\": \\"index.handler\\",
        \\"Role\\": {
          \\"Fn::GetAtt\\": [
            \\"LambdaApiHelloServiceRole7B3F9417\\",
            \\"Arn\\"
          ]
        },
        \\"Runtime\\": \\"nodejs12.x\\"
      },
      \\"DependsOn\\": [
        \\"LambdaApiHelloServiceRole7B3F9417\\"
      ]
    }
  },
  \\"Outputs\\": {
    \\"LambdaApiTestApiEndpoint14C92933\\": {
      \\"Value\\": {
        \\"Fn::Join\\": [
          \\"\\",
          [
            \\"https://\\",
            {
              \\"Ref\\": \\"LambdaApiTestApiCDC7EDDF\\"
            },
            \\".execute-api.\\",
            {
              \\"Ref\\": \\"AWS::Region\\"
            },
            \\".\\",
            {
              \\"Ref\\": \\"AWS::URLSuffix\\"
            },
            \\"/\\",
            {
              \\"Ref\\": \\"LambdaApiTestApiDeploymentStageprod7DCB485F\\"
            },
            \\"/\\"
          ]
        ]
      }
    }
  },
  \\"Parameters\\": {
    \\"AssetParametersf07ecf78d8de4fd74f5fe314bf9505be390b1cc665ccc5b05ef8ce4aeed2be62S3Bucket60B0362A\\": {
      \\"Type\\": \\"String\\",
      \\"Description\\": \\"S3 bucket for asset \\\\\\"f07ecf78d8de4fd74f5fe314bf9505be390b1cc665ccc5b05ef8ce4aeed2be62\\\\\\"\\"
    },
    \\"AssetParametersf07ecf78d8de4fd74f5fe314bf9505be390b1cc665ccc5b05ef8ce4aeed2be62S3VersionKey0758FFA8\\": {
      \\"Type\\": \\"String\\",
      \\"Description\\": \\"S3 key for asset version \\\\\\"f07ecf78d8de4fd74f5fe314bf9505be390b1cc665ccc5b05ef8ce4aeed2be62\\\\\\"\\"
    },
    \\"AssetParametersf07ecf78d8de4fd74f5fe314bf9505be390b1cc665ccc5b05ef8ce4aeed2be62ArtifactHashD1B4CB31\\": {
      \\"Type\\": \\"String\\",
      \\"Description\\": \\"Artifact hash for asset \\\\\\"f07ecf78d8de4fd74f5fe314bf9505be390b1cc665ccc5b05ef8ce4aeed2be62\\\\\\"\\"
    }
  }
}"
`;

exports[`LambdaApiConstruct synthetizes using dirDist and python 1`] = `
"{
  \\"Resources\\": {
    \\"LambdaApiTestApiCDC7EDDF\\": {
      \\"Type\\": \\"AWS::ApiGateway::RestApi\\",
      \\"Properties\\": {
        \\"Name\\": \\"TestApi\\"
      }
    },
    \\"LambdaApiTestApiDeploymentC09FA65F7cc5eda69bb9e7c7542a03f11bb5690a\\": {
      \\"Type\\": \\"AWS::ApiGateway::Deployment\\",
      \\"Properties\\": {
        \\"RestApiId\\": {
          \\"Ref\\": \\"LambdaApiTestApiCDC7EDDF\\"
        },
        \\"Description\\": \\"Automatically created by the RestApi construct\\"
      },
      \\"DependsOn\\": [
        \\"LambdaApiTestApihelloGET86810A6E\\",
        \\"LambdaApiTestApihelloOPTIONS0D3F2434\\",
        \\"LambdaApiTestApihello287B32B7\\"
      ]
    },
    \\"LambdaApiTestApiDeploymentStageprod7DCB485F\\": {
      \\"Type\\": \\"AWS::ApiGateway::Stage\\",
      \\"Properties\\": {
        \\"RestApiId\\": {
          \\"Ref\\": \\"LambdaApiTestApiCDC7EDDF\\"
        },
        \\"DeploymentId\\": {
          \\"Ref\\": \\"LambdaApiTestApiDeploymentC09FA65F7cc5eda69bb9e7c7542a03f11bb5690a\\"
        },
        \\"StageName\\": \\"prod\\"
      }
    },
    \\"LambdaApiTestApiCloudWatchRole0731508D\\": {
      \\"Type\\": \\"AWS::IAM::Role\\",
      \\"Properties\\": {
        \\"AssumeRolePolicyDocument\\": {
          \\"Statement\\": [
            {
              \\"Action\\": \\"sts:AssumeRole\\",
              \\"Effect\\": \\"Allow\\",
              \\"Principal\\": {
                \\"Service\\": \\"apigateway.amazonaws.com\\"
              }
            }
          ],
          \\"Version\\": \\"2012-10-17\\"
        },
        \\"ManagedPolicyArns\\": [
          {
            \\"Fn::Join\\": [
              \\"\\",
              [
                \\"arn:\\",
                {
                  \\"Ref\\": \\"AWS::Partition\\"
                },
                \\":iam::aws:policy/service-role/AmazonAPIGatewayPushToCloudWatchLogs\\"
              ]
            ]
          }
        ]
      }
    },
    \\"LambdaApiTestApiAccount4308A17A\\": {
      \\"Type\\": \\"AWS::ApiGateway::Account\\",
      \\"Properties\\": {
        \\"CloudWatchRoleArn\\": {
          \\"Fn::GetAtt\\": [
            \\"LambdaApiTestApiCloudWatchRole0731508D\\",
            \\"Arn\\"
          ]
        }
      },
      \\"DependsOn\\": [
        \\"LambdaApiTestApiCDC7EDDF\\"
      ]
    },
    \\"LambdaApiTestApihello287B32B7\\": {
      \\"Type\\": \\"AWS::ApiGateway::Resource\\",
      \\"Properties\\": {
        \\"ParentId\\": {
          \\"Fn::GetAtt\\": [
            \\"LambdaApiTestApiCDC7EDDF\\",
            \\"RootResourceId\\"
          ]
        },
        \\"PathPart\\": \\"hello\\",
        \\"RestApiId\\": {
          \\"Ref\\": \\"LambdaApiTestApiCDC7EDDF\\"
        }
      }
    },
    \\"LambdaApiTestApihelloOPTIONS0D3F2434\\": {
      \\"Type\\": \\"AWS::ApiGateway::Method\\",
      \\"Properties\\": {
        \\"HttpMethod\\": \\"OPTIONS\\",
        \\"ResourceId\\": {
          \\"Ref\\": \\"LambdaApiTestApihello287B32B7\\"
        },
        \\"RestApiId\\": {
          \\"Ref\\": \\"LambdaApiTestApiCDC7EDDF\\"
        },
        \\"AuthorizationType\\": \\"NONE\\",
        \\"Integration\\": {
          \\"IntegrationResponses\\": [
            {
              \\"ResponseParameters\\": {
                \\"method.response.header.Access-Control-Allow-Headers\\": \\"'Content-Type,X-Amz-Date,Authorization,X-Api-Key,X-Amz-Security-Token'\\",
                \\"method.response.header.Access-Control-Allow-Origin\\": \\"'*'\\",
                \\"method.response.header.Access-Control-Allow-Credentials\\": \\"'false'\\",
                \\"method.response.header.Access-Control-Allow-Methods\\": \\"'OPTIONS,GET'\\"
              },
              \\"StatusCode\\": \\"200\\"
            }
          ],
          \\"PassthroughBehavior\\": \\"NEVER\\",
          \\"RequestTemplates\\": {
            \\"application/json\\": \\"{\\\\\\"statusCode\\\\\\": 200}\\"
          },
          \\"Type\\": \\"MOCK\\"
        },
        \\"MethodResponses\\": [
          {
            \\"ResponseParameters\\": {
              \\"method.response.header.Access-Control-Allow-Headers\\": true,
              \\"method.response.header.Access-Control-Allow-Methods\\": true,
              \\"method.response.header.Access-Control-Allow-Credentials\\": true,
              \\"method.response.header.Access-Control-Allow-Origin\\": true
            },
            \\"StatusCode\\": \\"200\\"
          }
        ]
      }
    },
    \\"LambdaApiTestApihelloGETApiPermissionStackLambdaApiTestApiCA7E01A2GEThello7A64CBF8\\": {
      \\"Type\\": \\"AWS::Lambda::Permission\\",
      \\"Properties\\": {
        \\"Action\\": \\"lambda:InvokeFunction\\",
        \\"FunctionName\\": {
          \\"Fn::GetAtt\\": [
            \\"LambdaApiHelloA9D6B516\\",
            \\"Arn\\"
          ]
        },
        \\"Principal\\": \\"apigateway.amazonaws.com\\",
        \\"SourceArn\\": {
          \\"Fn::Join\\": [
            \\"\\",
            [
              \\"arn:\\",
              {
                \\"Ref\\": \\"AWS::Partition\\"
              },
              \\":execute-api:\\",
              {
                \\"Ref\\": \\"AWS::Region\\"
              },
              \\":\\",
              {
                \\"Ref\\": \\"AWS::AccountId\\"
              },
              \\":\\",
              {
                \\"Ref\\": \\"LambdaApiTestApiCDC7EDDF\\"
              },
              \\"/\\",
              {
                \\"Ref\\": \\"LambdaApiTestApiDeploymentStageprod7DCB485F\\"
              },
              \\"/GET/hello\\"
            ]
          ]
        }
      }
    },
    \\"LambdaApiTestApihelloGETApiPermissionTestStackLambdaApiTestApiCA7E01A2GEThello66B9EB83\\": {
      \\"Type\\": \\"AWS::Lambda::Permission\\",
      \\"Properties\\": {
        \\"Action\\": \\"lambda:InvokeFunction\\",
        \\"FunctionName\\": {
          \\"Fn::GetAtt\\": [
            \\"LambdaApiHelloA9D6B516\\",
            \\"Arn\\"
          ]
        },
        \\"Principal\\": \\"apigateway.amazonaws.com\\",
        \\"SourceArn\\": {
          \\"Fn::Join\\": [
            \\"\\",
            [
              \\"arn:\\",
              {
                \\"Ref\\": \\"AWS::Partition\\"
              },
              \\":execute-api:\\",
              {
                \\"Ref\\": \\"AWS::Region\\"
              },
              \\":\\",
              {
                \\"Ref\\": \\"AWS::AccountId\\"
              },
              \\":\\",
              {
                \\"Ref\\": \\"LambdaApiTestApiCDC7EDDF\\"
              },
              \\"/test-invoke-stage/GET/hello\\"
            ]
          ]
        }
      }
    },
    \\"LambdaApiTestApihelloGET86810A6E\\": {
      \\"Type\\": \\"AWS::ApiGateway::Method\\",
      \\"Properties\\": {
        \\"HttpMethod\\": \\"GET\\",
        \\"ResourceId\\": {
          \\"Ref\\": \\"LambdaApiTestApihello287B32B7\\"
        },
        \\"RestApiId\\": {
          \\"Ref\\": \\"LambdaApiTestApiCDC7EDDF\\"
        },
        \\"AuthorizationType\\": \\"NONE\\",
        \\"Integration\\": {
          \\"IntegrationHttpMethod\\": \\"POST\\",
          \\"Type\\": \\"AWS_PROXY\\",
          \\"Uri\\": {
            \\"Fn::Join\\": [
              \\"\\",
              [
                \\"arn:\\",
                {
                  \\"Ref\\": \\"AWS::Partition\\"
                },
                \\":apigateway:\\",
                {
                  \\"Ref\\": \\"AWS::Region\\"
                },
                \\":lambda:path/2015-03-31/functions/\\",
                {
                  \\"Fn::GetAtt\\": [
                    \\"LambdaApiHelloA9D6B516\\",
                    \\"Arn\\"
                  ]
                },
                \\"/invocations\\"
              ]
            ]
          }
        }
      }
    },
    \\"LambdaApiHelloServiceRole7B3F9417\\": {
      \\"Type\\": \\"AWS::IAM::Role\\",
      \\"Properties\\": {
        \\"AssumeRolePolicyDocument\\": {
          \\"Statement\\": [
            {
              \\"Action\\": \\"sts:AssumeRole\\",
              \\"Effect\\": \\"Allow\\",
              \\"Principal\\": {
                \\"Service\\": \\"lambda.amazonaws.com\\"
              }
            }
          ],
          \\"Version\\": \\"2012-10-17\\"
        },
        \\"ManagedPolicyArns\\": [
          {
            \\"Fn::Join\\": [
              \\"\\",
              [
                \\"arn:\\",
                {
                  \\"Ref\\": \\"AWS::Partition\\"
                },
                \\":iam::aws:policy/service-role/AWSLambdaBasicExecutionRole\\"
              ]
            ]
          }
        ]
      }
    },
    \\"LambdaApiHelloA9D6B516\\": {
      \\"Type\\": \\"AWS::Lambda::Function\\",
      \\"Properties\\": {
        \\"Code\\": {
          \\"S3Bucket\\": {
            \\"Ref\\": \\"AssetParameters835c8be73bbfddacf263ac13d62b5eaf3e1294443647cd22b68e0b6762fa0709S3Bucket099B6C5F\\"
          },
          \\"S3Key\\": {
            \\"Fn::Join\\": [
              \\"\\",
              [
                {
                  \\"Fn::Select\\": [
                    0,
                    {
                      \\"Fn::Split\\": [
                        \\"||\\",
                        {
                          \\"Ref\\": \\"AssetParameters835c8be73bbfddacf263ac13d62b5eaf3e1294443647cd22b68e0b6762fa0709S3VersionKey79FA28ED\\"
                        }
                      ]
                    }
                  ]
                },
                {
                  \\"Fn::Select\\": [
                    1,
                    {
                      \\"Fn::Split\\": [
                        \\"||\\",
                        {
                          \\"Ref\\": \\"AssetParameters835c8be73bbfddacf263ac13d62b5eaf3e1294443647cd22b68e0b6762fa0709S3VersionKey79FA28ED\\"
                        }
                      ]
                    }
                  ]
                }
              ]
            ]
          }
        },
        \\"Handler\\": \\"lambda.handler\\",
        \\"Role\\": {
          \\"Fn::GetAtt\\": [
            \\"LambdaApiHelloServiceRole7B3F9417\\",
            \\"Arn\\"
          ]
        },
        \\"Runtime\\": \\"python3.7\\"
      },
      \\"DependsOn\\": [
        \\"LambdaApiHelloServiceRole7B3F9417\\"
      ]
    }
  },
  \\"Outputs\\": {
    \\"LambdaApiTestApiEndpoint14C92933\\": {
      \\"Value\\": {
        \\"Fn::Join\\": [
          \\"\\",
          [
            \\"https://\\",
            {
              \\"Ref\\": \\"LambdaApiTestApiCDC7EDDF\\"
            },
            \\".execute-api.\\",
            {
              \\"Ref\\": \\"AWS::Region\\"
            },
            \\".\\",
            {
              \\"Ref\\": \\"AWS::URLSuffix\\"
            },
            \\"/\\",
            {
              \\"Ref\\": \\"LambdaApiTestApiDeploymentStageprod7DCB485F\\"
            },
            \\"/\\"
          ]
        ]
      }
    }
  },
  \\"Parameters\\": {
    \\"AssetParameters835c8be73bbfddacf263ac13d62b5eaf3e1294443647cd22b68e0b6762fa0709S3Bucket099B6C5F\\": {
      \\"Type\\": \\"String\\",
      \\"Description\\": \\"S3 bucket for asset \\\\\\"835c8be73bbfddacf263ac13d62b5eaf3e1294443647cd22b68e0b6762fa0709\\\\\\"\\"
    },
    \\"AssetParameters835c8be73bbfddacf263ac13d62b5eaf3e1294443647cd22b68e0b6762fa0709S3VersionKey79FA28ED\\": {
      \\"Type\\": \\"String\\",
      \\"Description\\": \\"S3 key for asset version \\\\\\"835c8be73bbfddacf263ac13d62b5eaf3e1294443647cd22b68e0b6762fa0709\\\\\\"\\"
    },
    \\"AssetParameters835c8be73bbfddacf263ac13d62b5eaf3e1294443647cd22b68e0b6762fa0709ArtifactHash937E8A45\\": {
      \\"Type\\": \\"String\\",
      \\"Description\\": \\"Artifact hash for asset \\\\\\"835c8be73bbfddacf263ac13d62b5eaf3e1294443647cd22b68e0b6762fa0709\\\\\\"\\"
    }
  }
}"
`;

exports[`LambdaApiConstruct synthetizes without subroute 1`] = `
"{
  \\"Resources\\": {
    \\"LambdaApiTestApiCDC7EDDF\\": {
      \\"Type\\": \\"AWS::ApiGateway::RestApi\\",
      \\"Properties\\": {
        \\"Name\\": \\"TestApi\\"
      }
    },
    \\"LambdaApiTestApiDeploymentC09FA65F7cc5eda69bb9e7c7542a03f11bb5690a\\": {
      \\"Type\\": \\"AWS::ApiGateway::Deployment\\",
      \\"Properties\\": {
        \\"RestApiId\\": {
          \\"Ref\\": \\"LambdaApiTestApiCDC7EDDF\\"
        },
        \\"Description\\": \\"Automatically created by the RestApi construct\\"
      },
      \\"DependsOn\\": [
        \\"LambdaApiTestApihelloGET86810A6E\\",
        \\"LambdaApiTestApihelloOPTIONS0D3F2434\\",
        \\"LambdaApiTestApihello287B32B7\\"
      ]
    },
    \\"LambdaApiTestApiDeploymentStageprod7DCB485F\\": {
      \\"Type\\": \\"AWS::ApiGateway::Stage\\",
      \\"Properties\\": {
        \\"RestApiId\\": {
          \\"Ref\\": \\"LambdaApiTestApiCDC7EDDF\\"
        },
        \\"DeploymentId\\": {
          \\"Ref\\": \\"LambdaApiTestApiDeploymentC09FA65F7cc5eda69bb9e7c7542a03f11bb5690a\\"
        },
        \\"StageName\\": \\"prod\\"
      }
    },
    \\"LambdaApiTestApiCloudWatchRole0731508D\\": {
      \\"Type\\": \\"AWS::IAM::Role\\",
      \\"Properties\\": {
        \\"AssumeRolePolicyDocument\\": {
          \\"Statement\\": [
            {
              \\"Action\\": \\"sts:AssumeRole\\",
              \\"Effect\\": \\"Allow\\",
              \\"Principal\\": {
                \\"Service\\": \\"apigateway.amazonaws.com\\"
              }
            }
          ],
          \\"Version\\": \\"2012-10-17\\"
        },
        \\"ManagedPolicyArns\\": [
          {
            \\"Fn::Join\\": [
              \\"\\",
              [
                \\"arn:\\",
                {
                  \\"Ref\\": \\"AWS::Partition\\"
                },
                \\":iam::aws:policy/service-role/AmazonAPIGatewayPushToCloudWatchLogs\\"
              ]
            ]
          }
        ]
      }
    },
    \\"LambdaApiTestApiAccount4308A17A\\": {
      \\"Type\\": \\"AWS::ApiGateway::Account\\",
      \\"Properties\\": {
        \\"CloudWatchRoleArn\\": {
          \\"Fn::GetAtt\\": [
            \\"LambdaApiTestApiCloudWatchRole0731508D\\",
            \\"Arn\\"
          ]
        }
      },
      \\"DependsOn\\": [
        \\"LambdaApiTestApiCDC7EDDF\\"
      ]
    },
    \\"LambdaApiTestApihello287B32B7\\": {
      \\"Type\\": \\"AWS::ApiGateway::Resource\\",
      \\"Properties\\": {
        \\"ParentId\\": {
          \\"Fn::GetAtt\\": [
            \\"LambdaApiTestApiCDC7EDDF\\",
            \\"RootResourceId\\"
          ]
        },
        \\"PathPart\\": \\"hello\\",
        \\"RestApiId\\": {
          \\"Ref\\": \\"LambdaApiTestApiCDC7EDDF\\"
        }
      }
    },
    \\"LambdaApiTestApihelloOPTIONS0D3F2434\\": {
      \\"Type\\": \\"AWS::ApiGateway::Method\\",
      \\"Properties\\": {
        \\"HttpMethod\\": \\"OPTIONS\\",
        \\"ResourceId\\": {
          \\"Ref\\": \\"LambdaApiTestApihello287B32B7\\"
        },
        \\"RestApiId\\": {
          \\"Ref\\": \\"LambdaApiTestApiCDC7EDDF\\"
        },
        \\"AuthorizationType\\": \\"NONE\\",
        \\"Integration\\": {
          \\"IntegrationResponses\\": [
            {
              \\"ResponseParameters\\": {
                \\"method.response.header.Access-Control-Allow-Headers\\": \\"'Content-Type,X-Amz-Date,Authorization,X-Api-Key,X-Amz-Security-Token'\\",
                \\"method.response.header.Access-Control-Allow-Origin\\": \\"'*'\\",
                \\"method.response.header.Access-Control-Allow-Credentials\\": \\"'false'\\",
                \\"method.response.header.Access-Control-Allow-Methods\\": \\"'OPTIONS,GET'\\"
              },
              \\"StatusCode\\": \\"200\\"
            }
          ],
          \\"PassthroughBehavior\\": \\"NEVER\\",
          \\"RequestTemplates\\": {
            \\"application/json\\": \\"{\\\\\\"statusCode\\\\\\": 200}\\"
          },
          \\"Type\\": \\"MOCK\\"
        },
        \\"MethodResponses\\": [
          {
            \\"ResponseParameters\\": {
              \\"method.response.header.Access-Control-Allow-Headers\\": true,
              \\"method.response.header.Access-Control-Allow-Methods\\": true,
              \\"method.response.header.Access-Control-Allow-Credentials\\": true,
              \\"method.response.header.Access-Control-Allow-Origin\\": true
            },
            \\"StatusCode\\": \\"200\\"
          }
        ]
      }
    },
    \\"LambdaApiTestApihelloGETApiPermissionStackLambdaApiTestApiCA7E01A2GEThello7A64CBF8\\": {
      \\"Type\\": \\"AWS::Lambda::Permission\\",
      \\"Properties\\": {
        \\"Action\\": \\"lambda:InvokeFunction\\",
        \\"FunctionName\\": {
          \\"Fn::GetAtt\\": [
            \\"LambdaApiHelloA9D6B516\\",
            \\"Arn\\"
          ]
        },
        \\"Principal\\": \\"apigateway.amazonaws.com\\",
        \\"SourceArn\\": {
          \\"Fn::Join\\": [
            \\"\\",
            [
              \\"arn:\\",
              {
                \\"Ref\\": \\"AWS::Partition\\"
              },
              \\":execute-api:\\",
              {
                \\"Ref\\": \\"AWS::Region\\"
              },
              \\":\\",
              {
                \\"Ref\\": \\"AWS::AccountId\\"
              },
              \\":\\",
              {
                \\"Ref\\": \\"LambdaApiTestApiCDC7EDDF\\"
              },
              \\"/\\",
              {
                \\"Ref\\": \\"LambdaApiTestApiDeploymentStageprod7DCB485F\\"
              },
              \\"/GET/hello\\"
            ]
          ]
        }
      }
    },
    \\"LambdaApiTestApihelloGETApiPermissionTestStackLambdaApiTestApiCA7E01A2GEThello66B9EB83\\": {
      \\"Type\\": \\"AWS::Lambda::Permission\\",
      \\"Properties\\": {
        \\"Action\\": \\"lambda:InvokeFunction\\",
        \\"FunctionName\\": {
          \\"Fn::GetAtt\\": [
            \\"LambdaApiHelloA9D6B516\\",
            \\"Arn\\"
          ]
        },
        \\"Principal\\": \\"apigateway.amazonaws.com\\",
        \\"SourceArn\\": {
          \\"Fn::Join\\": [
            \\"\\",
            [
              \\"arn:\\",
              {
                \\"Ref\\": \\"AWS::Partition\\"
              },
              \\":execute-api:\\",
              {
                \\"Ref\\": \\"AWS::Region\\"
              },
              \\":\\",
              {
                \\"Ref\\": \\"AWS::AccountId\\"
              },
              \\":\\",
              {
                \\"Ref\\": \\"LambdaApiTestApiCDC7EDDF\\"
              },
              \\"/test-invoke-stage/GET/hello\\"
            ]
          ]
        }
      }
    },
    \\"LambdaApiTestApihelloGET86810A6E\\": {
      \\"Type\\": \\"AWS::ApiGateway::Method\\",
      \\"Properties\\": {
        \\"HttpMethod\\": \\"GET\\",
        \\"ResourceId\\": {
          \\"Ref\\": \\"LambdaApiTestApihello287B32B7\\"
        },
        \\"RestApiId\\": {
          \\"Ref\\": \\"LambdaApiTestApiCDC7EDDF\\"
        },
        \\"AuthorizationType\\": \\"NONE\\",
        \\"Integration\\": {
          \\"IntegrationHttpMethod\\": \\"POST\\",
          \\"Type\\": \\"AWS_PROXY\\",
          \\"Uri\\": {
            \\"Fn::Join\\": [
              \\"\\",
              [
                \\"arn:\\",
                {
                  \\"Ref\\": \\"AWS::Partition\\"
                },
                \\":apigateway:\\",
                {
                  \\"Ref\\": \\"AWS::Region\\"
                },
                \\":lambda:path/2015-03-31/functions/\\",
                {
                  \\"Fn::GetAtt\\": [
                    \\"LambdaApiHelloA9D6B516\\",
                    \\"Arn\\"
                  ]
                },
                \\"/invocations\\"
              ]
            ]
          }
        }
      }
    },
    \\"LambdaApiHelloServiceRole7B3F9417\\": {
      \\"Type\\": \\"AWS::IAM::Role\\",
      \\"Properties\\": {
        \\"AssumeRolePolicyDocument\\": {
          \\"Statement\\": [
            {
              \\"Action\\": \\"sts:AssumeRole\\",
              \\"Effect\\": \\"Allow\\",
              \\"Principal\\": {
                \\"Service\\": \\"lambda.amazonaws.com\\"
              }
            }
          ],
          \\"Version\\": \\"2012-10-17\\"
        },
        \\"ManagedPolicyArns\\": [
          {
            \\"Fn::Join\\": [
              \\"\\",
              [
                \\"arn:\\",
                {
                  \\"Ref\\": \\"AWS::Partition\\"
                },
                \\":iam::aws:policy/service-role/AWSLambdaBasicExecutionRole\\"
              ]
            ]
          }
        ]
      }
    },
    \\"LambdaApiHelloA9D6B516\\": {
      \\"Type\\": \\"AWS::Lambda::Function\\",
      \\"Properties\\": {
        \\"Code\\": {
          \\"S3Bucket\\": {
            \\"Ref\\": \\"AssetParametersf07ecf78d8de4fd74f5fe314bf9505be390b1cc665ccc5b05ef8ce4aeed2be62S3Bucket60B0362A\\"
          },
          \\"S3Key\\": {
            \\"Fn::Join\\": [
              \\"\\",
              [
                {
                  \\"Fn::Select\\": [
                    0,
                    {
                      \\"Fn::Split\\": [
                        \\"||\\",
                        {
                          \\"Ref\\": \\"AssetParametersf07ecf78d8de4fd74f5fe314bf9505be390b1cc665ccc5b05ef8ce4aeed2be62S3VersionKey0758FFA8\\"
                        }
                      ]
                    }
                  ]
                },
                {
                  \\"Fn::Select\\": [
                    1,
                    {
                      \\"Fn::Split\\": [
                        \\"||\\",
                        {
                          \\"Ref\\": \\"AssetParametersf07ecf78d8de4fd74f5fe314bf9505be390b1cc665ccc5b05ef8ce4aeed2be62S3VersionKey0758FFA8\\"
                        }
                      ]
                    }
                  ]
                }
              ]
            ]
          }
        },
        \\"Handler\\": \\"index.handler\\",
        \\"Role\\": {
          \\"Fn::GetAtt\\": [
            \\"LambdaApiHelloServiceRole7B3F9417\\",
            \\"Arn\\"
          ]
        },
        \\"Runtime\\": \\"nodejs12.x\\"
      },
      \\"DependsOn\\": [
        \\"LambdaApiHelloServiceRole7B3F9417\\"
      ]
    }
  },
  \\"Outputs\\": {
    \\"LambdaApiTestApiEndpoint14C92933\\": {
      \\"Value\\": {
        \\"Fn::Join\\": [
          \\"\\",
          [
            \\"https://\\",
            {
              \\"Ref\\": \\"LambdaApiTestApiCDC7EDDF\\"
            },
            \\".execute-api.\\",
            {
              \\"Ref\\": \\"AWS::Region\\"
            },
            \\".\\",
            {
              \\"Ref\\": \\"AWS::URLSuffix\\"
            },
            \\"/\\",
            {
              \\"Ref\\": \\"LambdaApiTestApiDeploymentStageprod7DCB485F\\"
            },
            \\"/\\"
          ]
        ]
      }
    }
  },
  \\"Parameters\\": {
    \\"AssetParametersf07ecf78d8de4fd74f5fe314bf9505be390b1cc665ccc5b05ef8ce4aeed2be62S3Bucket60B0362A\\": {
      \\"Type\\": \\"String\\",
      \\"Description\\": \\"S3 bucket for asset \\\\\\"f07ecf78d8de4fd74f5fe314bf9505be390b1cc665ccc5b05ef8ce4aeed2be62\\\\\\"\\"
    },
    \\"AssetParametersf07ecf78d8de4fd74f5fe314bf9505be390b1cc665ccc5b05ef8ce4aeed2be62S3VersionKey0758FFA8\\": {
      \\"Type\\": \\"String\\",
      \\"Description\\": \\"S3 key for asset version \\\\\\"f07ecf78d8de4fd74f5fe314bf9505be390b1cc665ccc5b05ef8ce4aeed2be62\\\\\\"\\"
    },
    \\"AssetParametersf07ecf78d8de4fd74f5fe314bf9505be390b1cc665ccc5b05ef8ce4aeed2be62ArtifactHashD1B4CB31\\": {
      \\"Type\\": \\"String\\",
      \\"Description\\": \\"Artifact hash for asset \\\\\\"f07ecf78d8de4fd74f5fe314bf9505be390b1cc665ccc5b05ef8ce4aeed2be62\\\\\\"\\"
    }
  }
}"
`;
